--- a/RPGVXAcecn/rgss/g_classes.html
+++ b/RPGVXAcecn/rgss/g_classes.html
@@ -7,17 +7,17 @@ type=text/css href="../style.css">
 <BODY>
 <H1>RGSS&nbsp;&#20869;&#24314;&#31867;</H1>
 <UL>
-  <LI><A href="gc_bitmap.html">Bitmap &#20301;&#22270;&#31867;</A> 
-  <LI><A href="gc_color.html">Color &#33394;&#24425;&#31867;</A> 
-  <LI><A href="gc_font.html">Font &#23383;&#20307;&#31867;</A> 
-  <LI><A href="gc_plane.html">Plane &#24179;&#38754;&#31867;</A> 
-  <LI><A href="gc_rect.html">Rect &#30697;&#24418;&#31867;</A> 
-  <LI><A href="gc_sprite.html">Sprite &#31934;&#28789;&#31867;</A> 
-  <LI><A href="gc_table.html">Table &#34920;&#26684;&#31867;</A> 
-  <LI><A href="gc_tilemap.html">Tilemap &#20803;&#20214;&#22320;&#22270;&#31867;</A> 
-  <LI><A href="gc_tone.html">Tone &#33394;&#35843;&#31867;</A> 
-  <LI><A href="gc_viewport.html">Viewport &#26174;&#31034;&#31471;&#21475;&#31867;</A> 
-  <LI><A href="gc_window.html">Window &#31383;&#21475;&#31867;</A> 
-  <LI><A href="gc_rgsserror.html">RGSSError RGSS&#38169;&#35823;&#31867;</A> 
-  <LI><A href="gc_rgssreset.html">RGSSReset RGSS&#37325;&#32622;&#31867;</A> </LI></UL>
+  <LI><A href="gc_bitmap.html">Bitmap</A> 
+  <LI><A href="gc_color.html">Color</A> 
+  <LI><A href="gc_font.html">Font</A> 
+  <LI><A href="gc_plane.html">Plane</A> 
+  <LI><A href="gc_rect.html">Rect</A> 
+  <LI><A href="gc_sprite.html">Sprite</A> 
+  <LI><A href="gc_table.html">Table</A> 
+  <LI><A href="gc_tilemap.html">Tilemap</A> 
+  <LI><A href="gc_tone.html">Tone</A> 
+  <LI><A href="gc_viewport.html">Viewport</A> 
+  <LI><A href="gc_window.html">Window</A> 
+  <LI><A href="gc_rgsserror.html">RGSSError RGSS</A> 
+  <LI><A href="gc_rgssreset.html">RGSSReset RGSS</A> </LI></UL>
 <H6></H6></BODY></HTML>
