--- a/RPGVXAcecn/rgss/g_modules.html
+++ b/RPGVXAcecn/rgss/g_modules.html
@@ -7,8 +7,8 @@ type=text/css href="../style.css">
 <BODY>
 <H1>RGSS&nbsp;&#20869;&#24314;&#27169;&#22359;</H1>
 <UL>
-  <LI><A href="gm_audio.html">Audio &#38899;&#39057;&#27169;&#22359;</A> 
-  <LI><A href="gm_graphics.html">Graphics &#22270;&#20687;&#27169;&#22359;</A> 
-  <LI><A href="gm_input.html">Input &#36755;&#20837;&#27169;&#22359;</A> 
+  <LI><A href="gm_audio.html">Audio</A> 
+  <LI><A href="gm_graphics.html">Graphics</A> 
+  <LI><A href="gm_input.html">Input</A> 
   <LI><A href="gm_rpg.html">RPG RPG&#27169;&#22359;</A> </LI></UL>
 <H6></H6></BODY></HTML>
