--- a/RPGVXAcecn/rgss/gc_color.html
+++ b/RPGVXAcecn/rgss/gc_color.html
@@ -5,12 +5,12 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>Color &#33394;&#24425;&#31867;</FONT></H1>
-<P><FONT face=&#24494;&#36719;&#38597;&#40657;>RGBA &#39068;&#33394;&#30340;&#31867;&#12290;&#27599;&#20010;&#25104;&#20998;&#20351;&#29992;&#28014;&#28857;&#23567;&#25968;&#20540;&#65288;</FONT><A href="sc_float.html"><FONT 
-face=&#24494;&#36719;&#38597;&#40657;>Float &#28014;&#28857;&#25968;&#31867;</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;>&nbsp;&#65289;&#12290;</FONT></P>
+<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>Color</FONT></H1>
+<P><FONT face=&#24494;&#36719;&#38597;&#40657;>RGBA&#12290;&#27599;&#20010;&#25104;&#20998;&#20351;&#29992;&#28014;&#28857;&#23567;&#25968;&#20540;&#65288;</FONT><A href="sc_float.html"><FONT 
+face=&#24494;&#36719;&#38597;&#40657;>Float</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;>&nbsp;&#65289;&#12290;</FONT></P>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#36229;&#31867;</FONT></H2>
 <UL>
-  <LI><A href="sc_object.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Object &#29289;&#20214;&#31867;</FONT></A><FONT 
+  <LI><A href="sc_object.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Object</FONT></A><FONT 
   face=&#24494;&#36719;&#38597;&#40657;> </FONT></LI></UL>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#31867;&#26041;&#27861;</FONT></H2>
 <DL>
