--- a/RPGVXAcecn/rgss/gc_font.html
+++ b/RPGVXAcecn/rgss/gc_font.html
@@ -1,18 +1,18 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML lang=en><HEAD><TITLE>Font</TITLE>
 <META content="text/html; charset=ISO-8859-1" http-equiv=Content-Type>
-<META content=text/css http-equiv=Content-Style-Type><LINK rel=stylesheet 
+<META content=text/css http-equiv=Content-Style-Type><LINK rel=stylesheet
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>Font &#23383;&#20307;&#31867;</FONT></H1>
-<P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#23383;&#20307;&#30340;&#31867;&#12290;&#23383;&#20307;&#26159; </FONT><A href="gc_bitmap.html"><FONT 
-face=&#24494;&#36719;&#38597;&#40657;>Bitmap &#20301;&#22270;&#31867;</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;> &#30340;&#23646;&#24615;&#12290;</FONT></P>
-<P><FONT 
+<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>Font</FONT></H1>
+<P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#23383;&#20307;&#30340;&#31867;&#12290;&#23383;&#20307;&#26159; </FONT><A href="gc_bitmap.html"><FONT
+face=&#24494;&#36719;&#38597;&#40657;>Bitmap</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;> &#30340;&#23646;&#24615;&#12290;</FONT></P>
+<P><FONT
 face=&#24494;&#36719;&#38597;&#40657;>&#22914;&#26524;&#28216;&#25103;&#30446;&#24405;&#19979;&#23384;&#22312;&#19968;&#20010;“Fonts”&#25991;&#20214;&#22841;&#65292;&#37027;&#20040;&#23601;&#31639;&#31995;&#32479;&#20013;&#27809;&#26377;&#23433;&#35013;&#30456;&#24212;&#23383;&#20307;&#65292;&#28216;&#25103;&#20013;&#20381;&#28982;&#21487;&#20197;&#20351;&#29992;&#35813;&#25991;&#20214;&#22841;&#20013;&#23384;&#22312;&#30340;&#23383;&#20307;&#12290;</FONT></P>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#36229;&#31867;</FONT></H2>
 <UL>
-  <LI><A href="sc_object.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Object &#29289;&#20214;&#31867;</FONT></A><FONT 
+  <LI><A href="sc_object.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Object</FONT></A><FONT
   face=&#24494;&#36719;&#38597;&#40657;> </FONT></LI></UL>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#31867;&#26041;&#27861;</FONT></H2>
 <DL>
@@ -27,8 +27,8 @@ face=&#24494;&#36719;&#38597;&#40657;>&#22914;&#26524;&#28216;&#25103;&#30446;&#
   <DT><FONT face=&#24494;&#36719;&#38597;&#40657;>name </FONT>
   <DD>
   <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#23383;&#20307;&#30340;&#21517;&#31216;&#12290;&#21487;&#20197;&#20381;&#29031;&#21916;&#27426;&#30340;&#39034;&#24207;&#25351;&#23450;&#20026;&#21253;&#21547;&#22810;&#20010;&#23383;&#20307;&#21517;&#31216;&#30340;&#23383;&#31526;&#20018;&#25968;&#32452;&#12290;</FONT></P><PRE><FONT face=&#24494;&#36719;&#38597;&#40657;>font.name = ["Myriad", "Verdana"]</FONT></PRE>
-  <P><FONT 
-  face=&#24494;&#36719;&#38597;&#40657;>&#22312;&#20363;&#23376;&#20013;&#65292;&#25105;&#20204;&#20026;&#20102;&#36328;&#24179;&#21488;&#27491;&#24120;&#26174;&#31034;&#27721;&#23383;&#32780;&#20351;&#29992;&#20102;&#23383;&#20307;&#30340;&#33521;&#25991;&#21517;&#65292;&#33509;&#31995;&#32479;&#20013;&#19981;&#23384;&#22312;&#20248;&#20808;&#24230;&#39640;&#30340;&#12300;Myriad&#12301;&#65292;&#21017;&#20250;&#20351;&#29992;&#31532;&#20108;&#36873;&#25321;&#12300;Verdana&#12301;&#65292;&#20381;&#27492;&#31867;&#25512;&#12290;</FONT></P>
+  <P><FONT
+  face=&#24494;&#36719;&#38597;&#40657;>&#22312;&#20363;&#23376;&#20013;&#65292;&#25105;&#20204;&#20026;&#20102;&#36328;&#24179;&#21488;&#27491;&#24120;&#26174;&#31034;&#27721;&#23383;&#32780;&#20351;&#29992;&#20102;&#23383;&#20307;&#30340;&#33521;&#25991;&#21517;&#65292;&#33509;&#31995;&#32479;&#20013;&#19981;&#23384;&#22312;&#20248;&#20808;&#24230;&#39640;&#30340;&#12300;Myriad&#12301;&#65292;&#21017;&#20250;&#20351;&#29992;&#31532;&#20108;&#36873;&#25321;&#12300;Verdana&#25512;&#12290;</FONT></P>
   <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#39044;&#35774;&#26159;["Verdana", "Arial", "Courier New"]&#12290;</FONT></P>
   <DT><FONT face=&#24494;&#36719;&#38597;&#40657;>size </FONT>
   <DD>
@@ -44,19 +44,17 @@ face=&#24494;&#36719;&#38597;&#40657;>&#22914;&#26524;&#28216;&#25103;&#30446;&#
   <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#25991;&#23383;&#36718;&#24275;&#26631;&#35760;&#65292;&#39044;&#35774;&#20026;true&#12290;</FONT></P>
   <DT><FONT face=&#24494;&#36719;&#38597;&#40657;>shadow </FONT>
   <DD>
-  <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#25991;&#23383;&#38452;&#24433;&#26631;&#35760;&#12290;&#39044;&#35774;&#20026; true <SPAN class=rgss3>(RGSS3)</SPAN>&#12290;&#35774;&#20026; true 
+  <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#25991;&#23383;&#38452;&#24433;&#26631;&#35760;&#12290;&#39044;&#35774;&#20026; true <SPAN class=rgss3>(RGSS3)</SPAN>&#12290;&#35774;&#20026; true
   &#26102;&#20250;&#22312;&#25991;&#23383;&#30340;&#21491;&#19979;&#26041;&#25551;&#32472;&#40657;&#33394;&#30340;&#25991;&#23383;&#38452;&#24433;&#12290; </FONT></P>
   <DT><FONT face=&#24494;&#36719;&#38597;&#40657;>color </FONT>
   <DD>
-  <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#25991;&#23383;&#39068;&#33394;&#65288;</FONT><A href="gc_color.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Color 
-  &#33394;&#24425;&#31867;</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;> &#65289;&#65289;&#12290;&#20063;&#21487;&#20197;&#35843;&#25972; alpha &#20540;&#12290;&#39044;&#35774;&#20026; 
+  <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#25991;&#23383;&#39068;&#33394;&#65288;</FONT><A href="gc_color.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Color</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;> &#65289;&#12290;&#20063;&#21487;&#20197;&#35843;&#25972; alpha &#20540;&#12290;&#39044;&#35774;&#20026;
   (255,255,255,255)&#12290;</FONT></P>
-  <P><FONT face=&#24494;&#36719;&#38597;&#40657;>alpha &#20540;&#20063;&#21516;&#26102;&#29992;&#26469;&#25551;&#32472;&#25991;&#23383;&#38452;&#24433;&#21644;&#25991;&#23383;&#36718;&#24275; <SPAN class=rgss3>(RGSS3)</SPAN> 
+  <P><FONT face=&#24494;&#36719;&#38597;&#40657;>alpha &#20540;&#20063;&#21516;&#26102;&#29992;&#26469;&#25551;&#32472;&#25991;&#23383;&#38452;&#24433;&#21644;&#25991;&#23383;&#36718;&#24275; <SPAN class=rgss3>(RGSS3)</SPAN>
   &#12290;</FONT></P>
   <DT><FONT face=&#24494;&#36719;&#38597;&#40657;>out_color <SPAN class=rgss3>(RGSS3)</SPAN> </FONT>
   <DD>
-  <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#25991;&#23383;&#36718;&#24275;&#39068;&#33394;&#65288;</FONT><A href="gc_color.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Color 
-  &#33394;&#24425;&#31867;</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;>&nbsp;&#65289;&#65292;&#39044;&#35774;&#20540;&#20026;(0,0,0,128)&#12290;</FONT></P></DD></DL>
+  <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#25991;&#23383;&#36718;&#24275;&#39068;&#33394;&#65288;</FONT><A href="gc_color.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Color</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;>&nbsp;&#65289;&#65292;&#39044;&#35774;&#20540;&#20026;(0,0,0,128)&#12290;</FONT></P></DD></DL>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#31867;&#23646;&#24615;</FONT></H2>
 <DL>
   <DT><FONT face=&#24494;&#36719;&#38597;&#40657;>default_name </FONT>
