--- a/RPGVXAcecn/rgss/gc_plane.html
+++ b/RPGVXAcecn/rgss/gc_plane.html
@@ -5,18 +5,18 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>Plane &#24179;&#38754;&#31867;</FONT></H1>
+<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>Plane</FONT></H1>
 <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#24179;&#38754;&#30340;&#31867;&#12290;&#24179;&#38754;&#26159;&#23558;&#20301;&#22270;&#24179;&#38138;&#22312;&#30011;&#38754;&#19978;&#30340;&#29305;&#27530;&#31934;&#28789;&#65292;&#29992;&#26469;&#26174;&#31034;&#36828;&#26223;&#22270;&#31561;&#20351;&#29992;&#12290;</FONT></P>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#36229;&#31867;</FONT></H2>
 <UL>
-  <LI><A href="sc_object.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Object &#29289;&#20214;&#31867;</FONT></A><FONT 
+  <LI><A href="sc_object.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Object</FONT></A><FONT 
   face=&#24494;&#36719;&#38597;&#40657;> </FONT></LI></UL>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#31867;&#26041;&#27861;</FONT></H2>
 <DL>
   <DT><FONT face=&#24494;&#36719;&#38597;&#40657;>Plane.new([<VAR>viewport</VAR>]) </FONT>
   <DD>
   <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#29983;&#25104;&#19968;&#20010;&#24179;&#38754;&#23545;&#35937;&#12290;&#24517;&#35201;&#26102;&#25351;&#23450;&#19968;&#20010;&#26174;&#31034;&#31471;&#21475;&#65288;</FONT><A 
-  href="gc_viewport.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Viewport &#26174;&#31034;&#31471;&#21475;&#31867;</FONT></A><FONT 
+  href="gc_viewport.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Viewport</FONT></A><FONT 
   face=&#24494;&#36719;&#38597;&#40657;>&#65289;&#12290;</FONT></P></DD></DL>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#26041;&#27861;</FONT></H2>
 <DL>
@@ -31,11 +31,11 @@ type=text/css href="../style.css">
   <DT><FONT face=&#24494;&#36719;&#38597;&#40657;>bitmap </FONT>
   <DD>
   <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#24341;&#29992;&#27492;&#24179;&#38754;&#25152;&#20351;&#29992;&#30340;&#20301;&#22270;&#65288;</FONT><A href="gc_bitmap.html"><FONT 
-  face=&#24494;&#36719;&#38597;&#40657;>Bitmap &#20301;&#22270;&#31867;</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;>&#65289;&#12290;</FONT></P>
+  face=&#24494;&#36719;&#38597;&#40657;>Bitmap</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;>&#65289;&#12290;</FONT></P>
   <DT><FONT face=&#24494;&#36719;&#38597;&#40657;>viewport </FONT>
   <DD>
   <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#24341;&#29992;&#19982;&#24179;&#38754;&#20851;&#32852;&#30340;&#26174;&#31034;&#31471;&#21475;&#65288;</FONT><A href="rgss/gc_viewport.html"><FONT 
-  face=&#24494;&#36719;&#38597;&#40657;>Viewport &#26174;&#31034;&#31471;&#21475;&#31867;</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;>&#65289;&#12290;</FONT></P>
+  face=&#24494;&#36719;&#38597;&#40657;>Viewport</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;>&#65289;&#12290;</FONT></P>
   <DT><FONT face=&#24494;&#36719;&#38597;&#40657;>visible </FONT>
   <DD>
   <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#24179;&#38754;&#21487;&#35265;&#30340;&#29366;&#24577;&#12290;true&#34920;&#31034;&#21487;&#35265;&#12290;</FONT></P>
@@ -63,10 +63,9 @@ type=text/css href="../style.css">
   <DT><FONT face=&#24494;&#36719;&#38597;&#40657;>color </FONT>
   <DD>
   <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#19982;&#24179;&#38754;&#21512;&#25104;&#30340;&#39068;&#33394;&#65288;</FONT><A href="gc_color.html"><FONT 
-  face=&#24494;&#36719;&#38597;&#40657;>Color &#33394;&#24425;&#31867;</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;>&nbsp;&#65289;&#33394;&#24425;&#30340; alpha 
+  face=&#24494;&#36719;&#38597;&#40657;>Color</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;>&nbsp;&#65289;&#33394;&#24425;&#30340; alpha 
   &#20540;&#20316;&#20026;&#21512;&#25104;&#30340;&#27604;&#20363;&#12290;</FONT></P>
   <DT><FONT face=&#24494;&#36719;&#38597;&#40657;>tone </FONT>
   <DD>
-  <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#24179;&#38754;&#30340;&#33394;&#35843;&#65288;</FONT><A href="gc_tone.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Tone 
-  &#33394;&#35843;&#31867;</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;>&nbsp;&#65289;&#12290;</FONT></P></DD></DL>
+  <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#24179;&#38754;&#30340;&#33394;&#35843;&#65288;</FONT><A href="gc_tone.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Tone</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;>&nbsp;&#65289;&#12290;</FONT></P></DD></DL>
 <H6><FONT face=&#24494;&#36719;&#38597;&#40657;></FONT></H6></BODY></HTML>
