--- a/RPGVXAcecn/rgss/gc_rect.html
+++ b/RPGVXAcecn/rgss/gc_rect.html
@@ -5,11 +5,11 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1>Rect &#30697;&#24418;&#31867;</H1>
+<H1>Rect</H1>
 <P>&#30697;&#24418;&#30340;&#31867;&#12290;</P>
 <H2>&#36229;&#31867;</H2>
 <UL>
-  <LI><A href="sc_object.html">Object &#29289;&#20214;&#31867;</A> </LI></UL>
+  <LI><A href="sc_object.html">Object</A> </LI></UL>
 <H2>&#31867;&#26041;&#27861;</H2>
 <DL>
   <DT>Rect.new(<VAR>x</VAR>, <VAR>y</VAR>, <VAR>width</VAR>, <VAR>height</VAR>) 
