--- a/RPGVXAcecn/rgss/gc_rgsserror.html
+++ b/RPGVXAcecn/rgss/gc_rgsserror.html
@@ -5,11 +5,11 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1>RGSSError RGSS&#38169;&#35823;&#31867;</H1>
+<H1>RGSSError RGSS</H1>
 <P>&#25552;&#20379;&#36890;&#30693; RGSS &#20869;&#37096;&#24322;&#24120;&#30340;&#24322;&#24120;&#31867;&#12290;</P>
-<P>&#19968;&#33324;&#22312;&#23581;&#35797;&#23384;&#21462;&#24050;&#32463;&#37322;&#25918;&#30340; <A href="gc_bitmap.html">Bitmap &#20301;&#22270;&#31867;</A>&nbsp;&#25110; <A 
-href="gc_sprite.html">Sprite &#31934;&#28789;&#31867;</A> &#31867;&#30340;&#23545;&#35937;&#26102;&#25243;&#20986;&#12290;</P>
+<P>&#19968;&#33324;&#22312;&#23581;&#35797;&#23384;&#21462;&#24050;&#32463;&#37322;&#25918;&#30340; <A href="gc_bitmap.html">Bitmap</A>&nbsp;&#25110; <A 
+href="gc_sprite.html">Sprite</A> &#31867;&#30340;&#23545;&#35937;&#26102;&#25243;&#20986;&#12290;</P>
 <H2>&#36229;&#31867;</H2>
 <UL>
-  <LI><A href="s_exceptions.html#StandardError">StandardError &#26631;&#20934;&#24322;&#24120;&#31867;</A> </LI></UL>
+  <LI><A href="s_exceptions.html#StandardError">StandardError</A> </LI></UL>
 <H6></H6></BODY></HTML>
