--- a/RPGVXAcecn/rgss/gc_rgssreset.html
+++ b/RPGVXAcecn/rgss/gc_rgssreset.html
@@ -5,10 +5,10 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1>RGSSReset RGSS&#37325;&#32622;&#31867;</H1>
+<H1>RGSSReset RGSS</H1>
 <P>&#24403; F12 &#34987;&#25353;&#19979;&#26102;&#65292;&#26174;&#31034;&#28216;&#25103;&#25191;&#34892;&#26102;&#20135;&#29983;&#30340;&#38169;&#35823;&#31867;&#22411;&#25152;&#20351;&#29992;&#21040;&#30340;&#31867;&#12290;</P>
 <P>&#21517;&#23383;&#30001; RGSS2 &#20043;&#21069;&#29256;&#26412;&#30340;&#38544;&#34255;&#31867;&#21464;&#21270;&#32780;&#26469;&#12290; <SPAN class=rgss3>(RGSS3)</SPAN></P>
 <H2>&#36229;&#31867;</H2>
 <UL>
-  <LI><A href="sc_exception.html">Exception &#24322;&#24120;&#31867;</A> </LI></UL>
+  <LI><A href="sc_exception.html">Exception</A> </LI></UL>
 <H6></H6></BODY></HTML>
