--- a/RPGVXAcecn/rgss/gc_rpg_animation_frame.html
+++ b/RPGVXAcecn/rgss/gc_rpg_animation_frame.html
@@ -9,7 +9,7 @@ type=text/css href="../style.css">
 <P>&#21160;&#30011;&#24103;&#30340;&#25968;&#25454;&#31867;&#12290;</P>
 <H2>&#36229;&#31867;</H2>
 <UL>
-  <LI><A href="sc_object.html">Object &#29289;&#20214;&#31867;</A> </LI></UL>
+  <LI><A href="sc_object.html">Object</A> </LI></UL>
 <H2>&#35843;&#29992;&#32773;</H2>
 <UL>
   <LI><A href="gc_rpg_animation.html">RPG::Animation</A> </LI></UL>
@@ -20,7 +20,7 @@ type=text/css href="../style.css">
   <P>&#22270;&#35937;&#20803;&#25968;&#12290;&#30456;&#24403;&#20110;&#26412;&#24103;&#20013;&#22270;&#35937;&#20803;&#30340;&#26368;&#22823;&#32534;&#21495;&#12290;</P>
   <DT>cell_data 
   <DD>
-  <P>&#21253;&#21547;&#22270;&#35937;&#20803;&#20869;&#23481;&#30340;&#20108;&#32500;&#25968;&#32452;&#65288;<A href="gc_table.html">Table &#34920;&#26684;&#31867;</A>&nbsp;&#65289;&#12290;</P>
+  <P>&#21253;&#21547;&#22270;&#35937;&#20803;&#20869;&#23481;&#30340;&#20108;&#32500;&#25968;&#32452;&#65288;<A href="gc_table.html">Table</A>&nbsp;&#65289;&#12290;</P>
   <P>&#20351;&#29992; cell_data[<VAR>cell_index</VAR>, <VAR>data_index</VAR>] &#30340;&#24418;&#24335;&#12290;</P>
   <P><VAR>data_index</VAR> &#30340;&#33539;&#22260;&#26159;&#20174; 0 &#21040; 7 &#65292;&#20998;&#21035;&#20195;&#34920;&#19979;&#38754;&#30340;&#21508;&#31181;&#22270;&#35937;&#20803;&#20449;&#24687;&#65306;</P>
   <DD>
