--- a/RPGVXAcecn/rgss/gc_rpg_class.html
+++ b/RPGVXAcecn/rgss/gc_rpg_class.html
@@ -22,7 +22,7 @@ type=text/css href="../style.css">
     <LI>3:&nbsp;&#22686;&#21152;&#24230; B </LI></UL>
   <DT>params 
   <DD>
-  <P>&#33021;&#21147;&#20540;&#25104;&#38271;&#26354;&#32447;&#65292;&#35760;&#24405;&#27599;&#19968;&#31561;&#32423;&#22522;&#26412;&#23646;&#24615;&#30340;&#20108;&#32500;&#25968;&#32452; &#65288;<A href="gc_table.html">Table &#34920;&#26684;&#31867;</A>&nbsp;&#65289;&#12290;</P>
+  <P>&#33021;&#21147;&#20540;&#25104;&#38271;&#26354;&#32447;&#65292;&#35760;&#24405;&#27599;&#19968;&#31561;&#32423;&#22522;&#26412;&#23646;&#24615;&#30340;&#20108;&#32500;&#25968;&#32452; &#65288;<A href="gc_table.html">Table</A>&nbsp;&#65289;&#12290;</P>
   <P>&#20854;&#25968;&#25454;&#32467;&#26500;&#20026;[<VAR>param_id</VAR>, <VAR>level</VAR>]&#65292;param_id &#20195;&#34920;&#23646;&#24615;&#31867;&#22411;&#65292;level 
   &#21017;&#20195;&#34920;&#31561;&#32423;&#65292;&#23646;&#24615;&#31867;&#22411;&#30340;&#20195;&#21495;&#22914;&#19979;:</P>
   <UL>
