--- a/RPGVXAcecn/rgss/gc_rpg_enemy_drop_item.html
+++ b/RPGVXAcecn/rgss/gc_rpg_enemy_drop_item.html
@@ -9,7 +9,7 @@ type=text/css href="../style.css">
 <P>&#29289;&#21697;&#25481;&#33853;&#30340;&#25968;&#25454;&#31867;&#12290;</P>
 <H2>&#36229;&#31867;</H2>
 <UL>
-  <LI><A href="sc_object.html">Object &#29289;&#20214;&#31867;</A> </LI></UL>
+  <LI><A href="sc_object.html">Object</A> </LI></UL>
 <H2>&#35843;&#29992;&#32773;</H2>
 <UL>
   <LI><A href="gc_rpg_enemy.html">RPG::Enemy</A> </LI></UL>
