--- a/RPGVXAcecn/rgss/gc_rpg_map.html
+++ b/RPGVXAcecn/rgss/gc_rpg_map.html
@@ -9,7 +9,7 @@ type=text/css href="../style.css">
 <P>&#22320;&#22270;&#25968;&#25454;&#31867;&#12290;</P>
 <H2>&#36229;&#31867;</H2>
 <UL>
-  <LI><A href="sc_object.html">Object &#29289;&#20214;&#31867;</A> </LI></UL>
+  <LI><A href="sc_object.html">Object</A> </LI></UL>
 <H2>&#23646;&#24615;</H2>
 <DL>
   <DT>display_name 
@@ -81,7 +81,7 @@ type=text/css href="../style.css">
   <P>&#22320;&#22270;&#30340;&#22791;&#27880;&#12290;</P>
   <DT>data 
   <DD>
-  <P>&#22320;&#22270;&#25968;&#25454;&#12290;&#22320;&#22270;&#20803;&#20214; ID &#32534;&#21495;&#30340;&#19977;&#32500;&#25968;&#32452;&#12290;&#65288;<A href="gc_table.html">Table &#34920;&#26684;&#31867;</A>&nbsp;&#65289;&#12290;</P>
+  <P>&#22320;&#22270;&#25968;&#25454;&#12290;&#22320;&#22270;&#20803;&#20214; ID &#32534;&#21495;&#30340;&#19977;&#32500;&#25968;&#32452;&#12290;&#65288;<A href="gc_table.html">Table</A>&nbsp;&#65289;&#12290;</P>
   <DT>events 
   <DD>
   <P>&#22320;&#22270;&#20107;&#20214;&#12290;&#20197;&#20107;&#20214; ID &#20026;&#20027;&#38190;&#65292; <A 
