--- a/RPGVXAcecn/rgss/gc_rpg_system.html
+++ b/RPGVXAcecn/rgss/gc_rpg_system.html
@@ -9,7 +9,7 @@ type=text/css href="../style.css">
 <P>&#31995;&#32479;&#30340;&#25968;&#25454;&#31867;&#12290;</P>
 <H2>&#36229;&#31867;</H2>
 <UL>
-  <LI><A href="sc_object.html">Object &#29289;&#20214;&#31867;</A> </LI></UL>
+  <LI><A href="sc_object.html">Object</A> </LI></UL>
 <H2>&#23646;&#24615;</H2>
 <DL>
   <DT>game_title 
@@ -29,7 +29,7 @@ type=text/css href="../style.css">
   <P>&#36135;&#24065;&#21333;&#20301;&#12290;</P>
   <DT>window_tone 
   <DD>
-  <P>&#31383;&#21475;&#39068;&#33394;&#65288;<A href="gc_tone.html">Tone &#33394;&#35843;&#31867;</A>&nbsp;&#65289;&#12290;</P>
+  <P>&#31383;&#21475;&#39068;&#33394;&#65288;<A href="gc_tone.html">Tone</A>&nbsp;&#65289;&#12290;</P>
   <DT>elements 
   <DD>
   <P>&#23646;&#24615;&#21015;&#34920;&#12290;&#20197;&#23646;&#24615; ID &#32534;&#21495;&#20026;&#32034;&#24341;&#30340;&#23383;&#31526;&#20018;&#25968;&#32452;&#65292;0 &#21495;&#20803;&#32032;&#20026; nil&#12290;</P>
