--- a/RPGVXAcecn/rgss/gc_rpg_tileset.html
+++ b/RPGVXAcecn/rgss/gc_rpg_tileset.html
@@ -9,7 +9,7 @@ type=text/css href="../style.css">
 <P>&#22270;&#22359;&#30340;&#25968;&#25454;&#31867;&#12290;</P>
 <H2>&#36229;&#31867;</H2>
 <UL>
-  <LI><A href="sc_object.html">Object &#29289;&#20214;&#31867;</A> </LI></UL>
+  <LI><A href="sc_object.html">Object</A> </LI></UL>
 <H2>&#23646;&#24615;</H2>
 <DL>
   <DT>id 
@@ -20,7 +20,7 @@ type=text/css href="../style.css">
   <P>&#22270;&#22359;&#39029;&#21517;&#31216;&#12290;</P>
   <DT>mode 
   <DD>
-  <P>&#22270;&#22359;&#39029;&#27169;&#24335;&#65288;0&#65306;&#19990;&#30028;&#22320;&#22270;&#65292;1&#65306;&#21306;&#22495;&#22320;&#22270;&#65292;2&#65306;&#20860;&#23481;VX&#30340;&#31867;&#22411;&#65289;&#12290;</P>
+  <P>&#22270;&#22359;&#39029;&#27169;&#24335;&#65288;0&#65306;&#19990;&#30028;&#22320;&#22270;&#65292;1&#65306;&#21306;&#22495;&#22320;&#22270;&#65292;2&#65306;&#20860;&#23481;VX&#22411;&#65289;&#12290;</P>
   <DT>tileset_names[<VAR>index</VAR>] 
   <DD>
   <P>&#22270;&#22359;&#32034;&#24341;&#65288;0-8&#65289;&#20013;&#25152;&#20351;&#29992;&#30340;&#32032;&#26448;&#25991;&#20214;&#21517;&#12290;</P>
@@ -50,7 +50,7 @@ type=text/css href="../style.css">
       <TD>TileE</TD></TR></TBODY></TABLE>
   <DT>flags 
   <DD>
-  <P>&#36890;&#34892;&#24230;&#35774;&#23450;&#12290;&#21033;&#29992;&#19968;&#32500;&#25968;&#32452;&#20648;&#23384;&#30528;&#36890;&#34892;&#24230;&#35774;&#23450;&#65288;<A href="gc_table.html">Table &#34920;&#26684;&#31867;</A>&nbsp;&#65289;&#12290;</P>
+  <P>&#36890;&#34892;&#24230;&#35774;&#23450;&#12290;&#21033;&#29992;&#19968;&#32500;&#25968;&#32452;&#20648;&#23384;&#30528;&#36890;&#34892;&#24230;&#35774;&#23450;&#65288;<A href="gc_table.html">Table</A>&nbsp;&#65289;&#12290;</P>
   <P>&#29992;&#36825;&#20123;&#26631;&#35782;&#26631;&#27880;&#21487;&#36890;&#34892;&#29366;&#24577;&#65292;&#20854;&#21547;&#20041;&#22914;&#19979;&#25152;&#31034;:</P>
   <UL>
     <LI>0x0001:&nbsp;&#19981;&#21487;&#21521;&#19979;&#36890;&#34892; 
