--- a/RPGVXAcecn/rgss/gc_rpg_troop.html
+++ b/RPGVXAcecn/rgss/gc_rpg_troop.html
@@ -9,7 +9,7 @@ type=text/css href="../style.css">
 <P>&#25932;&#20154;&#38431;&#20237;&#30340;&#25968;&#25454;&#31867;&#12290;</P>
 <H2>&#36229;&#31867;</H2>
 <UL>
-  <LI><A href="sc_object.html">Object &#29289;&#20214;&#31867;</A> </LI></UL>
+  <LI><A href="sc_object.html">Object</A> </LI></UL>
 <H2>&#23646;&#24615;</H2>
 <DL>
   <DT>id 
