--- a/RPGVXAcecn/rgss/gc_rpg_usableitem_damage.html
+++ b/RPGVXAcecn/rgss/gc_rpg_usableitem_damage.html
@@ -9,7 +9,7 @@ type=text/css href="../style.css">
 <P>&#20260;&#23475;&#30340;&#25968;&#25454;&#31867;&#12290;</P>
 <H2>&#36229;&#31867;</H2>
 <UL>
-  <LI><A href="sc_object.html">Object &#29289;&#20214;&#31867;</A> </LI></UL>
+  <LI><A href="sc_object.html">Object</A> </LI></UL>
 <H2>&#35843;&#29992;&#32773;</H2>
 <UL>
   <LI><A href="gc_rpg_usableitem.html">RPG::UsableItem</A> </LI></UL>
@@ -45,10 +45,10 @@ type=text/css href="../style.css">
   <P>&#21028;&#26029;&#20260;&#23475;&#23545;&#35937;&#26159;&#21542;&#20026;&#31354;&#65292;&#24403;&#20260;&#23475;&#31867;&#22411;&#20026; 0 &#26102;&#36820;&#22238;true&#12290;</P>
   <DT>to_hp? 
   <DD>
-  <P>&#21028;&#26029;&#20260;&#23475;&#23545;&#35937;&#26159;&#21542;&#20026; HP&#65292;&#24403;&#20260;&#23475;&#31867;&#22411;&#20026;&nbsp;1&#12289;3 &#25110; 5&nbsp;&#26102;&#36820;&#22238;true&#12290;</P>
+  <P>&#21028;&#26029;&#20260;&#23475;&#23545;&#35937;&#26159;&#21542;&#20026; HP&#22411;&#20026;&nbsp;1&#12289;3 &#25110; 5&nbsp;&#26102;&#36820;&#22238;true&#12290;</P>
   <DT>to_mp? 
   <DD>
-  <P>&#21028;&#26029;&#20260;&#23475;&#23545;&#35937;&#26159;&#21542;&#20026; MP&#65292;&#24403;&#20260;&#23475;&#31867;&#22411;&#20026; 2&#12289;4 &#25110;&nbsp;6 &#26102;&#36820;&#22238;true&#12290;</P>
+  <P>&#21028;&#26029;&#20260;&#23475;&#23545;&#35937;&#26159;&#21542;&#20026; MP&#22411;&#20026; 2&#12289;4 &#25110;&nbsp;6 &#26102;&#36820;&#22238;true&#12290;</P>
   <DT>recover? 
   <DD>
   <P>&#21028;&#26029;&#20260;&#23475;&#32467;&#26524;&#26159;&#21542;&#20026;&#24674;&#22797;&#65292;&#24403;&#20260;&#23475;&#31867;&#22411;&#20026; 3&#12289;4 &#26102;&#36820;&#22238;true&#12290;</P>
