--- a/RPGVXAcecn/rgss/gc_sprite.html
+++ b/RPGVXAcecn/rgss/gc_sprite.html
@@ -5,17 +5,16 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1>Sprite &#31934;&#28789;&#31867;</H1>
+<H1>Sprite</H1>
 <P>&#31934;&#28789;&#30340;&#31867;&#12290;&#31934;&#28789;&#26159;&#22312;&#28216;&#25103;&#30011;&#38754;&#19978;&#26174;&#31034;&#35282;&#33394;&#31561;&#30340;&#22522;&#26412;&#27010;&#24565;&#12290;</P>
 <H2>&#36229;&#31867;</H2>
 <UL>
-  <LI><A href="sc_object.html">Object &#29289;&#20214;&#31867;</A> </LI></UL>
+  <LI><A href="sc_object.html">Object</A> </LI></UL>
 <H2>&#31867;&#26041;&#27861;</H2>
 <DL>
   <DT>Sprite.new([<VAR>viewport</VAR>]) 
   <DD>
-  <P>&#29983;&#25104;&#19968;&#20010;&#31934;&#28789;&#23545;&#35937;&#12290;&#24517;&#35201;&#26102;&#25351;&#23450;&#19968;&#20010;&#26174;&#31034;&#31471;&#21475;&#65288;<A href="gc_viewport.html">Viewport 
-  &#26174;&#31034;&#31471;&#21475;&#31867;</A>&nbsp;&#65289;&#12290;</P></DD></DL>
+  <P>&#29983;&#25104;&#19968;&#20010;&#31934;&#28789;&#23545;&#35937;&#12290;&#24517;&#35201;&#26102;&#25351;&#23450;&#19968;&#20010;&#26174;&#31034;&#31471;&#21475;&#65288;<A href="gc_viewport.html">Viewport</A>&nbsp;&#65289;&#12290;</P></DD></DL>
 <H2>&#26041;&#27861;</H2>
 <DL>
   <DT>dispose 
@@ -42,13 +41,13 @@ type=text/css href="../style.css">
 <DL>
   <DT>bitmap 
   <DD>
-  <P>&#24341;&#29992;&#20316;&#20026;&#31934;&#28789;&#36215;&#22987;&#28857;&#30340;&#20301;&#22270;&#65288;<A href="gc_bitmap.html">Bitmap &#20301;&#22270;&#31867;</A>&nbsp;&#65289;&#12290;</P>
+  <P>&#24341;&#29992;&#20316;&#20026;&#31934;&#28789;&#36215;&#22987;&#28857;&#30340;&#20301;&#22270;&#65288;<A href="gc_bitmap.html">Bitmap</A>&nbsp;&#65289;&#12290;</P>
   <DT>src_rect 
   <DD>
-  <P>&#20301;&#22270;&#30340;&#30697;&#24418;&#65288;<A href="gc_rect.html">Rect &#30697;&#24418;&#31867;</A>&nbsp;&#65289;&#21306;&#22495;&#12290;</P>
+  <P>&#20301;&#22270;&#30340;&#30697;&#24418;&#65288;<A href="gc_rect.html">Rect</A>&nbsp;&#65289;&#21306;&#22495;&#12290;</P>
   <DT>viewport 
   <DD>
-  <P>&#24341;&#29992;&#19982;&#31934;&#28789;&#30456;&#20851;&#32852;&#30340;&#26174;&#31034;&#31471;&#21475;&#65288;<A href="gc_viewport.html">Viewport &#26174;&#31034;&#31471;&#21475;&#31867;</A>&nbsp;&#65289;&#12290;</P>
+  <P>&#24341;&#29992;&#19982;&#31934;&#28789;&#30456;&#20851;&#32852;&#30340;&#26174;&#31034;&#31471;&#21475;&#65288;<A href="gc_viewport.html">Viewport</A>&nbsp;&#65289;&#12290;</P>
   <DT>visible 
   <DD>
   <P>&#31934;&#28789;&#30340;&#21487;&#35265;&#29366;&#24577;&#65292;true&#20195;&#34920;&#21487;&#35265;&#12290;</P>
@@ -108,10 +107,10 @@ type=text/css href="../style.css">
   <P>&#31934;&#28789;&#30340;&#21512;&#25104;&#26041;&#24335;&#65288;0&#65306;&#27491;&#24120;&#12289;1&#65306;&#21152;&#27861;&#12289;2&#65306;&#20943;&#27861;&#65289;&#12290;</P>
   <DT>color 
   <DD>
-  <P>&#19982;&#31934;&#28789;&#21512;&#25104;&#30340;&#39068;&#33394;&#65288;<A href="gc_color.html">Color &#33394;&#24425;&#31867;</A>&nbsp;&#65289;&#33394;&#24425;&#30340; alpha 
+  <P>&#19982;&#31934;&#28789;&#21512;&#25104;&#30340;&#39068;&#33394;&#65288;<A href="gc_color.html">Color</A>&nbsp;&#65289;&#33394;&#24425;&#30340; alpha 
 &#20540;&#20316;&#20026;&#21512;&#25104;&#30340;&#27604;&#20363;&#12290;</P>
   <P>&#27492;&#39068;&#33394;&#19982; <A href="#flash">flash</A> &#25928;&#26524;&#30340;&#39068;&#33394;&#20998;&#24320;&#22788;&#29702;&#12290;&#28982;&#32780;&#65292;alpha &#20540;&#36739;&#39640;&#30340;&#39068;&#33394;&#22312;&#21512;&#25104;&#26102;&#65292;&#20248;&#20808;&#24230;&#36739;&#39640;&#12290;</P>
   <DT>tone 
   <DD>
-  <P>&#31934;&#28789;&#30340;&#33394;&#35843;&#65288;<A href="gc_tone.html">Tone &#33394;&#35843;&#31867;</A>&nbsp;&#65289;&#12290;</P></DD></DL>
+  <P>&#31934;&#28789;&#30340;&#33394;&#35843;&#65288;<A href="gc_tone.html">Tone</A>&nbsp;&#65289;&#12290;</P></DD></DL>
 <H6></H6></BODY></HTML>
