--- a/RPGVXAcecn/rgss/gc_table.html
+++ b/RPGVXAcecn/rgss/gc_table.html
@@ -5,12 +5,12 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1>Table &#34920;&#26684;&#31867;</H1>
+<H1>Table</H1>
 <P>&#22810;&#32500;&#25968;&#32452;&#30340;&#31867;&#65292;&#27599;&#20010;&#20803;&#32032;&#23481;&#32435;&#20004;&#20010;&#24102;&#31526;&#21495;&#20301;&#65292;&#33539;&#22260;&#26159; -32,768&#65374;32,767&#12290;</P>
-<P>Ruby&nbsp; <A href="sc_array.html">Array &#25968;&#32452;&#31867;</A> &#31867;&#22312;&#22788;&#29702;&#22823;&#37327;&#20449;&#24687;&#26102;&#25928;&#29575;&#24456;&#24046;&#65292;&#22240;&#27492;&#20351;&#29992;&#20102;&#27492;&#31867;&#12290;</P>
+<P>Ruby&nbsp; <A href="sc_array.html">Array</A> &#31867;&#22312;&#22788;&#29702;&#22823;&#37327;&#20449;&#24687;&#26102;&#25928;&#29575;&#24456;&#24046;&#65292;&#22240;&#27492;&#20351;&#29992;&#20102;&#27492;&#31867;&#12290;</P>
 <H2>&#36229;&#31867;</H2>
 <UL>
-  <LI><A href="sc_object.html">Object &#29289;&#20214;&#31867;</A> </LI></UL>
+  <LI><A href="sc_object.html">Object</A> </LI></UL>
 <H2>&#31867;&#26041;&#27861;</H2>
 <DL>
   <DT>Table.new(<VAR>xsize</VAR>[, <VAR>ysize</VAR>[, <VAR>zsize</VAR>]]) 
