--- a/RPGVXAcecn/rgss/gc_tone.html
+++ b/RPGVXAcecn/rgss/gc_tone.html
@@ -5,11 +5,11 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1>Tone &#33394;&#35843;&#31867;</H1>
-<P>&#33394;&#35843;&#30340;&#31867;&#12290;&#27599;&#20010;&#25104;&#20998;&#20351;&#29992;&#28014;&#28857;&#23567;&#25968;&#20540;&#65288;<A href="sc_float.html">Float &#28014;&#28857;&#25968;&#31867;</A>&nbsp;&#65289;&#12290;</P>
+<H1>Tone</H1>
+<P>&#33394;&#35843;&#30340;&#31867;&#12290;&#27599;&#20010;&#25104;&#20998;&#20351;&#29992;&#28014;&#28857;&#23567;&#25968;&#20540;&#65288;<A href="sc_float.html">Float</A>&nbsp;&#65289;&#12290;</P>
 <H2>&#36229;&#31867;</H2>
 <UL>
-  <LI><A href="sc_object.html">Object &#29289;&#20214;&#31867;</A> </LI></UL>
+  <LI><A href="sc_object.html">Object</A> </LI></UL>
 <H2>&#31867;&#26041;&#27861;</H2>
 <DL>
   <DT>Tone.new(<VAR>red</VAR>, <VAR>green</VAR>, <VAR>blue</VAR>[, 
