--- a/RPGVXAcecn/rgss/gc_viewport.html
+++ b/RPGVXAcecn/rgss/gc_viewport.html
@@ -5,11 +5,11 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1>Viewport &#26174;&#31034;&#31471;&#21475;&#31867;</H1>
+<H1>Viewport</H1>
 <P>&#26174;&#31034;&#31471;&#21475;&#30340;&#31867;&#12290;&#22312;&#30011;&#38754;&#19978;&#26174;&#31034;&#31934;&#28789;&#26102;&#65292;&#23558;&#31934;&#28789;&#38480;&#21046;&#22312;&#30011;&#38754;&#30340;&#19968;&#37096;&#20221;&#65292;&#32780;&#19981;&#24433;&#21709;&#20854;&#20313;&#21306;&#22495;&#12290;</P>
 <H2>&#36229;&#31867;</H2>
 <UL>
-  <LI><A href="sc_object.html">Object &#29289;&#20214;&#31867;</A> </LI></UL>
+  <LI><A href="sc_object.html">Object</A> </LI></UL>
 <H2>&#31867;&#26041;&#27861;</H2>
 <DL>
   <DT>Viewport.new(<VAR>x</VAR>, <VAR>y</VAR>, <VAR>width</VAR>, 
@@ -40,7 +40,7 @@ type=text/css href="../style.css">
 <DL>
   <DT>rect 
   <DD>
-  <P>&#23450;&#20041;&#26174;&#31034;&#31471;&#21475;&#21306;&#22495;&#30340;&#30697;&#24418;&#65288;<A href="gc_rect.html">Rect &#30697;&#24418;&#31867;</A>&nbsp;&#65289;&#12290;</P>
+  <P>&#23450;&#20041;&#26174;&#31034;&#31471;&#21475;&#21306;&#22495;&#30340;&#30697;&#24418;&#65288;<A href="gc_rect.html">Rect</A>&nbsp;&#65289;&#12290;</P>
   <DT>visible 
   <DD>
   <P>&#26174;&#31034;&#31471;&#21475;&#30340;&#21487;&#35265;&#29366;&#24577;&#65292;true &#20195;&#34920;&#21487;&#35265;&#12290;</P>
@@ -55,10 +55,10 @@ type=text/css href="../style.css">
   <P>&#26174;&#31034;&#31471;&#21475;&#24320;&#22987;&#28857;&#30340; Y &#22352;&#26631;&#12290;&#30011;&#38754;&#38663;&#21160;&#31561;&#25928;&#26524;&#26102;&#20462;&#25913;&#27492;&#25968;&#20540;&#12290;</P>
   <DT>color 
   <DD>
-  <P>&#19982;&#26174;&#31034;&#31471;&#21475;&#21512;&#25104;&#30340;&#39068;&#33394;&#65288;<A href="gc_color.html">Color &#33394;&#24425;&#31867;</A>&nbsp;&#65289;&#33394;&#24425;&#30340; alpha 
+  <P>&#19982;&#26174;&#31034;&#31471;&#21475;&#21512;&#25104;&#30340;&#39068;&#33394;&#65288;<A href="gc_color.html">Color</A>&nbsp;&#65289;&#33394;&#24425;&#30340; alpha 
   &#20540;&#20316;&#20026;&#21512;&#25104;&#30340;&#27604;&#20363;&#12290;</P>
   <P>&#27492;&#39068;&#33394;&#19982; <A href="#flash">flash</A> &#25928;&#26524;&#30340;&#39068;&#33394;&#20998;&#24320;&#22788;&#29702;&#12290;</P>
   <DT>tone 
   <DD>
-  <P>&#26174;&#31034;&#31471;&#21475;&#30340;&#33394;&#35843;&#65288;<A href="gc_tone.html">Tone &#33394;&#35843;&#31867;</A>&nbsp;&#65289;&#12290;</P></DD></DL>
+  <P>&#26174;&#31034;&#31471;&#21475;&#30340;&#33394;&#35843;&#65288;<A href="gc_tone.html">Tone</A>&nbsp;&#65289;&#12290;</P></DD></DL>
 <H6></H6></BODY></HTML>
