--- a/RPGVXAcecn/rgss/gm_audio.html
+++ b/RPGVXAcecn/rgss/gm_audio.html
@@ -5,7 +5,7 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 8.00.7601.17785"></HEAD>
 <BODY>
-<H1>Audio &#38899;&#39057;&#27169;&#22359;</H1>
+<H1>Audio</H1>
 <P>&#25191;&#34892;&#38899;&#20048;&#21644;&#22768;&#38899;&#22788;&#29702;&#30340;&#27169;&#22359;&#12290;</P>
 <H2>&#27169;&#22359;&#26041;&#27861;</H2>
 <DL>
