--- a/RPGVXAcecn/rgss/s_index.html
+++ b/RPGVXAcecn/rgss/s_index.html
@@ -5,51 +5,51 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 8.00.7601.17744"></HEAD>
 <BODY>
-<H1><FONT face=Verdana>&#26631;&#20934;&#20989;&#25968;&#24211;</FONT></H1>
+<H1><FONT face=Verdana>&#26631;&#20934;&#24211;</FONT></H1>
 <UL>
   <LI><A href="s_functions.html">&#20869;&#24314;&#20989;&#25968;</A> 
   <LI><A href="s_variables.html">&#20869;&#24314;&#21464;&#37327;</A> 
   <LI><A href="s_classes.html">&#20869;&#24314;&#31867;</A> 
   <UL>
-    <LI><A href="sc_object.html">Object &#29289;&#20214;&#31867;</A> 
+    <LI><A href="sc_object.html">Object</A> 
     <UL>
-      <LI><A href="sc_array.html">Array &#25968;&#32452;&#31867;</A> 
-      <LI><A href="sc_exception.html">Exception &#24322;&#24120;&#31867;</A> 
-      <LI><A href="sc_falseclass.html">FalseClass &#20266;&#31867;</A> 
-      <LI><A href="sc_fiber.html">Fiber &#36827;&#31243;&#31867;</A> 
-      <LI><A href="sc_hash.html">Hash &#21704;&#24076;&#34920;&#31867;</A> 
-      <LI><A href="sc_io.html">IO &#36755;&#20837;&#36755;&#20986;&#31867;</A> 
+      <LI><A href="sc_array.html">Array</A> 
+      <LI><A href="sc_exception.html">Exception</A> 
+      <LI><A href="sc_falseclass.html">FalseClass</A> 
+      <LI><A href="sc_fiber.html">Fiber</A> 
+      <LI><A href="sc_hash.html">Hash</A> 
+      <LI><A href="sc_io.html">IO</A> 
       <UL>
-        <LI><A href="sc_file.html">File &#25991;&#20214;&#31867;</A> </LI></UL>
-      <LI><A href="sc_matchdata.html">MatchData &#21305;&#37197;&#31867;</A> 
-      <LI><A href="sc_method.html">Method &#26041;&#27861;&#31867;</A> 
-      <LI><A href="sc_module.html">Module &#27169;&#22359;&#31867;</A> 
+        <LI><A href="sc_file.html">File</A> </LI></UL>
+      <LI><A href="sc_matchdata.html">MatchData</A> 
+      <LI><A href="sc_method.html">Method</A> 
+      <LI><A href="sc_module.html">Module</A> 
       <UL>
-        <LI><A href="sc_class.html">Class &#31867;&#31867;</A> </LI></UL>
-      <LI><A href="sc_nilclass.html">NilClass &#31354;&#31867;</A> 
-      <LI><A href="sc_numeric.html">Numeric &#25968;&#23383;&#31867;</A> 
+        <LI><A href="sc_class.html">Class</A> </LI></UL>
+      <LI><A href="sc_nilclass.html">NilClass</A> 
+      <LI><A href="sc_numeric.html">Numeric</A> 
       <UL>
-        <LI><A href="sc_integer.html">Integer &#25972;&#25968;&#31867;</A> 
+        <LI><A href="sc_integer.html">Integer</A> 
         <UL>
-          <LI><A href="sc_bignum.html">Bignum &#36229;&#38271;&#25972;&#25968;&#31867;</A> 
-          <LI><A href="sc_fixnum.html">Fixnum &#22266;&#23450;&#25972;&#25968;&#31867;</A> </LI></UL>
-        <LI><A href="sc_float.html">Float &#28014;&#28857;&#25968;&#31867;</A> </LI></UL>
-      <LI><A href="sc_proc.html">Proc &#36807;&#31243;&#31867;</A> 
-      <LI><A href="sc_range.html">Range &#33539;&#22260;&#31867;</A> 
-      <LI><A href="sc_regexp.html">Regexp &#27491;&#21017;&#34920;&#36798;&#24335;&#31867;</A> 
-      <LI><A href="sc_string.html">String &#23383;&#31526;&#20018;&#31867;</A> 
-      <LI><A href="sc_symbol.html">Symbol &#31526;&#21495;&#31867;</A> 
-      <LI><A href="sc_time.html">Time &#26102;&#38388;&#31867;</A> 
-      <LI><A href="sc_trueclass.html">TrueClass &#30495;&#31867;</A> </LI></UL></LI></UL>
+          <LI><A href="sc_bignum.html">Bignum</A> 
+          <LI><A href="sc_fixnum.html">Fixnum</A> </LI></UL>
+        <LI><A href="sc_float.html">Float</A> </LI></UL>
+      <LI><A href="sc_proc.html">Proc</A> 
+      <LI><A href="sc_range.html">Range</A> 
+      <LI><A href="sc_regexp.html">Regexp</A> 
+      <LI><A href="sc_string.html">String</A> 
+      <LI><A href="sc_symbol.html">Symbol</A> 
+      <LI><A href="sc_time.html">Time</A> 
+      <LI><A href="sc_trueclass.html">TrueClass</A> </LI></UL></LI></UL>
   <LI><A href="s_modules.html">&#20869;&#24314;&#27169;&#22359;</A> 
   <UL>
-    <LI><A href="sm_comparable.html">Comparable &#21487;&#27604;&#36739;&#27169;&#22359;</A> 
-    <LI><A href="sm_enumerable.html">Enumerable &#21487;&#20030;&#20363;&#27169;&#22359;</A> 
-    <LI><A href="sm_errno.html">Errno &#38169;&#35823;&#27169;&#22359;</A> 
-    <LI><A href="sm_filetest.html">FileTest &#25991;&#20214;&#27979;&#35797;&#27169;&#22359;</A> 
-    <LI><A href="sm_gc.html">GC &#22403;&#22334;&#22238;&#25910;&#27169;&#22359;</A> 
-    <LI><A href="sm_kernel.html">Kernel &#26680;&#24515;&#27169;&#22359;</A> 
-    <LI><A href="sm_marshal.html">Marshal &#36882;&#24402;&#27169;&#22359;</A> 
-    <LI><A href="sm_math.html">Math &#25968;&#23398;&#27169;&#22359;</A> </LI></UL>
+    <LI><A href="sm_comparable.html">Comparable</A> 
+    <LI><A href="sm_enumerable.html">Enumerable</A> 
+    <LI><A href="sm_errno.html">Errno</A> 
+    <LI><A href="sm_filetest.html">FileTest</A> 
+    <LI><A href="sm_gc.html">GC</A> 
+    <LI><A href="sm_kernel.html">Kernel</A> 
+    <LI><A href="sm_marshal.html">Marshal</A> 
+    <LI><A href="sm_math.html">Math</A> </LI></UL>
   <LI><A href="s_exceptions.html">&#20869;&#24314;&#24322;&#24120;&#31867;</A> </LI></UL>
 <H6></H6></BODY></HTML>
