--- a/RPGVXAcecn/rgss/s_modules.html
+++ b/RPGVXAcecn/rgss/s_modules.html
@@ -7,12 +7,12 @@ type=text/css href="../style.css">
 <BODY>
 <H1>&#20869;&#24314;&#27169;&#22359;</H1>
 <UL>
-  <LI><A href="sm_comparable.html">Comparable &#21487;&#27604;&#36739;&#27169;&#22359;</A> 
-  <LI><A href="sm_enumerable.html">Enumerable &#21487;&#20030;&#20363;&#27169;&#22359;</A> 
-  <LI><A href="sm_errno.html">Errno &#38169;&#35823;&#27169;&#22359;</A> 
-  <LI><A href="sm_filetest.html">FileTest &#25991;&#20214;&#27979;&#35797;&#27169;&#22359;</A> 
-  <LI><A href="sm_gc.html">GC &#22403;&#22334;&#22238;&#25910;&#27169;&#22359;</A> 
-  <LI><A href="sm_kernel.html">Kernel &#26680;&#24515;&#27169;&#22359;</A> 
-  <LI><A href="sm_marshal.html">Marshal &#36882;&#24402;&#27169;&#22359;</A> 
-  <LI><A href="sm_math.html">Math &#25968;&#23398;&#27169;&#22359;</A> </LI></UL>
+  <LI><A href="sm_comparable.html">Comparable</A> 
+  <LI><A href="sm_enumerable.html">Enumerable</A> 
+  <LI><A href="sm_errno.html">Errno</A> 
+  <LI><A href="sm_filetest.html">FileTest</A> 
+  <LI><A href="sm_gc.html">GC</A> 
+  <LI><A href="sm_kernel.html">Kernel</A> 
+  <LI><A href="sm_marshal.html">Marshal</A> 
+  <LI><A href="sm_math.html">Math</A> </LI></UL>
 <H6></H6></BODY></HTML>
