--- a/RPGVXAcecn/rgss/s_variables.html
+++ b/RPGVXAcecn/rgss/s_variables.html
@@ -12,8 +12,7 @@ type=text/css href="../style.css">
 <DL>
   <DT><A name=L000428>$~</A> 
   <DD>
-  <P>&#22312;&#24403;&#21069;&#30340;&#20316;&#29992;&#22495;&#20043;&#20869;&#65292;&#19978;&#19968;&#27425;&#25152;&#21305;&#37197;&#25104;&#21151;&#30340;&#20449;&#24687;&#65288;<A href="sc_matchdata.html">MatchData 
-  &#21305;&#37197;&#31867;</A>&#65289;&#12290;&#35774;&#23450;&#27492;&#21464;&#37327;&#20250;&#25913;&#21464; $&amp;&#12289;$1 ... $9 &#31561;&#21464;&#37327;&#30340;&#20540;&#12290;</P>
+  <P>&#22312;&#24403;&#21069;&#30340;&#20316;&#29992;&#22495;&#20043;&#20869;&#65292;&#19978;&#19968;&#27425;&#25152;&#21305;&#37197;&#25104;&#21151;&#30340;&#20449;&#24687;&#65288;<A href="sc_matchdata.html">MatchData</A>&#65289;&#12290;&#35774;&#23450;&#27492;&#21464;&#37327;&#20250;&#25913;&#21464; $&amp;&#12289;$1 ... $9 &#31561;&#21464;&#37327;&#30340;&#20540;&#12290;</P>
   <P>&#30456;&#24403;&#20110;&nbsp;<A href="sc_regexp.html#L001314">Regexp.last_match</A>&nbsp;&#12290;</P>
   <DT><A name=L000427>$&amp;</A> 
   <DD>
