--- a/RPGVXAcecn/rgss/sc_exception.html
+++ b/RPGVXAcecn/rgss/sc_exception.html
@@ -5,7 +5,7 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>Exception &#24322;&#24120;&#31867;</FONT></H1>
+<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>Exception</FONT></H1>
 <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#25152;&#26377;&#24322;&#24120;&#30340;&#36229;&#31867;&#12290;</FONT></P>
 <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#20851;&#20110;&#25152;&#26377;&#30340;&#23376;&#31867;&#20449;&#24687;&#65292;&#35831;&#21442;&#30475; </FONT><A href="s_exceptions.html"><FONT 
 face=&#24494;&#36719;&#38597;&#40657;>&#20869;&#24314;&#24322;&#24120;&#31867;</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;> &#12290;</FONT></P>
