--- a/RPGVXAcecn/rgss/sc_fixnum.html
+++ b/RPGVXAcecn/rgss/sc_fixnum.html
@@ -5,13 +5,13 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>Fixnum &#22266;&#23450;&#25972;&#25968;&#31867;</FONT></H1>
+<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>Fixnum</FONT></H1>
 <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#31526;&#21512;&#26426;&#22120;&#25351;&#38024;&#23481;&#37327;&#30340;&#22266;&#23450;&#38271;&#24230;&#30340;&#25972;&#25968;&#31867;&#65292;&#36890;&#24120;&#20026; 31 &#20301;&#38271;&#12290;&#33509;&#26159;&#36816;&#31639;&#32467;&#26524;&#36229;&#20986; Fixnum &#30340;&#33539;&#22260;&#65292;&#21017;&#33258;&#21160;&#24310;&#20280;&#25104; 
-</FONT><A href="sc_bignum.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Bignum &#36229;&#38271;&#25972;&#25968;&#31867;</FONT></A><FONT 
+</FONT><A href="sc_bignum.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Bignum</FONT></A><FONT 
 face=&#24494;&#36719;&#38597;&#40657;>&nbsp;&#12290;</FONT></P>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#36229;&#31867;</FONT></H2>
 <UL>
-  <LI><A href="sc_integer.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Integer &#25972;&#25968;&#31867;</FONT></A><FONT 
+  <LI><A href="sc_integer.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Integer</FONT></A><FONT 
   face=&#24494;&#36719;&#38597;&#40657;> </FONT></LI></UL>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#26041;&#27861;</FONT></H2>
 <DL>
