--- a/RPGVXAcecn/rgss/sc_float.html
+++ b/RPGVXAcecn/rgss/sc_float.html
@@ -5,12 +5,12 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>Float &#28014;&#28857;&#25968;&#31867;</FONT></H1>
+<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>Float</FONT></H1>
 <P><FONT face=&#24494;&#36719;&#38597;&#40657;>The floating-point number class. The implementation of Float 
 is double in C.</FONT></P>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#36229;&#31867;</FONT></H2>
 <UL>
-  <LI><A href="sc_numeric.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Numeric &#25968;&#23383;&#31867;</FONT></A><FONT 
+  <LI><A href="sc_numeric.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Numeric</FONT></A><FONT 
   face=&#24494;&#36719;&#38597;&#40657;> </FONT></LI></UL>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#26041;&#27861;</FONT></H2>
 <DL>
