--- a/RPGVXAcecn/rgss/sc_matchdata.html
+++ b/RPGVXAcecn/rgss/sc_matchdata.html
@@ -5,7 +5,7 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>MatchData &#21305;&#37197;&#31867;</FONT></H1>
+<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>MatchData</FONT></H1>
 <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#22788;&#29702;&#27491;&#35268;&#34920;&#36798;&#26159;&#21305;&#37197;&#25968;&#25454;&#30340;&#31867;&#12290;&#27492;&#31867;&#30340;&#23454;&#20363;&#36890;&#36807;&#19979;&#38754;&#30340;&#19977;&#20010;&#36884;&#24452;&#33719;&#24471;&#65306;</FONT></P>
 <UL>
   <LI><A href="sc_regexp.html#L001314"><FONT 
@@ -16,7 +16,7 @@ type=text/css href="../style.css">
   face=&#24494;&#36719;&#38597;&#40657;>. </FONT></LI></UL>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#36229;&#31867;</FONT></H2>
 <UL>
-  <LI><A href="sc_object.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Object &#29289;&#20214;&#31867;</FONT></A><FONT 
+  <LI><A href="sc_object.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Object</FONT></A><FONT 
   face=&#24494;&#36719;&#38597;&#40657;> </FONT></LI></UL>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#26041;&#27861;</FONT></H2>
 <DL>
