--- a/RPGVXAcecn/rgss/sc_method.html
+++ b/RPGVXAcecn/rgss/sc_method.html
@@ -5,7 +5,7 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>Method &#26041;&#27861;&#31867;</FONT></H1>
+<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>Method</FONT></H1>
 <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#34987; </FONT><A 
 href="rgss/sc_object.html#method"><FONT 
 face=&#24494;&#36719;&#38597;&#40657;>Object#method</FONT></A><FONT 
@@ -27,7 +27,7 @@ p m.call(1)     # =&gt; "foo called with arg 1"
 </FONT></PRE>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#36229;&#31867;</FONT></H2>
 <UL>
-  <LI><A href="sc_object.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Object &#29289;&#20214;&#31867;</FONT></A><FONT 
+  <LI><A href="sc_object.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Object</FONT></A><FONT 
   face=&#24494;&#36719;&#38597;&#40657;> </FONT></LI></UL>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#26041;&#27861;</FONT></H2>
 <DL>
