--- a/RPGVXAcecn/rgss/sc_object.html
+++ b/RPGVXAcecn/rgss/sc_object.html
@@ -5,11 +5,11 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 8.00.7601.17744"></HEAD>
 <BODY>
-<H1><FONT face=Verdana>Object &#29289;&#20214;&#31867;</FONT></H1>
+<H1><FONT face=Verdana>Object</FONT></H1>
 <P>&#25152;&#26377;&#31867;&#30340;&#36229;&#31867;&#65292;&#23450;&#20041;&#20102;&#19968;&#33324;&#23545;&#35937;&#30340;&#34892;&#20026;&#12290;</P>
 <H2>&#21253;&#21547;&#30340;&#27169;&#22359;</H2>
 <UL>
-  <LI><A href="sm_kernel.html">Kernel &#26680;&#24515;&#27169;&#22359;</A> </LI></UL>
+  <LI><A href="sm_kernel.html">Kernel</A> </LI></UL>
 <H2>&#26041;&#27861;</H2>
 <DL>
   <DT><A name=L000555><VAR>self</VAR> == <VAR>other</VAR></A> 
@@ -36,14 +36,14 @@ type=text/css href="../style.css">
   <P>&#21017;&#36890;&#24120;&#37117;&#20250;&#25104;&#31435;&#12290;</P>
   <P>&#33509;&#26159;&#23581;&#35797;&#22797;&#21046;&nbsp;true&#12289;false&#12289;nil&#12289;<A href="sc_numeric.html">Numeric &#25968;&#23383;</A>&#12289; <A 
   href="sc_symbol.html">Symbol &#31526;&#21495;</A>&nbsp;&#20043;&#31867;&#30340;&#23545;&#35937;&#21017;&#20250;&#25243;&#20986; <A 
-  href="s_exceptions.html#TypeError">TypeError&#65288;&#24322;&#24120;&#65306;&#31867;&#22411;&#38169;&#35823;&#65289;</A>&nbsp;&#12290;</P>
+  href="s_exceptions.html#TypeError">TypeError&#22411;&#38169;&#35823;&#65289;</A>&nbsp;&#12290;</P>
   <DT>equal?(<VAR>other</VAR>) 
   <DD>
   <P>&#24403;&nbsp;<VAR>other</VAR> &#26159; <VAR>self</VAR> &#26102;&#65292;&#36820;&#22238; true&#12290;&#27492;&#26041;&#27861;&#19981;&#21487;&#20197;&#34987;&#37325;&#26032;&#23450;&#20041;&#12290;</P>
   <DT>freeze 
   <DD>
   <P>&#20923;&#32467;&#23545;&#35937;&#65292;&#21363;&#31105;&#27490;&#25913;&#21160;&#23545;&#35937;&#30340;&#20869;&#23481;&#65292;&#33509;&#26159;&#20462;&#25913;&#20923;&#32467;&#23545;&#35937;&#20250;&#25243;&#20986; <A 
-  href="s_exceptions.html#TypeError">TypeError&#65288;&#24322;&#24120;&#65306;&#31867;&#22411;&#38169;&#35823;&#65289;</A>&nbsp;&#12290;</P>
+  href="s_exceptions.html#TypeError">TypeError&#22411;&#38169;&#35823;&#65289;</A>&nbsp;&#12290;</P>
   <DT>frozen? 
   <DD>
   <P>&#33509;&#26159;&#29289;&#20214;&#34987;&#20923;&#32467;&#21017;&#36820;&#22238; true&#12290;</P>
@@ -110,7 +110,7 @@ p obj.is_a? Hash    # false
 </FONT></PRE>
   <DT><A name=method>method(<VAR>name</VAR>)</A> 
   <DD>
-  <P>&#36820;&#22238;&#23545;&#35937;&#20013;&#21517;&#20026; name&nbsp;&#30340; <A href="sc_method.html">Method &#26041;&#27861;&#31867;</A>&nbsp;&#23545;&#35937;&#12290; 
+  <P>&#36820;&#22238;&#23545;&#35937;&#20013;&#21517;&#20026; name&nbsp;&#30340; <A href="sc_method.html">Method</A>&nbsp;&#23545;&#35937;&#12290; 
   <VAR>name</VAR>&nbsp;&#21487;&#20197;&#26159; <A href="sc_symbol.html">&#31526;&#21495;</A>&nbsp;&#25110;&#32773;&#23383;&#31526;&#20018;&#12290;</P>
   <DT>nil? 
   <DD>
