--- a/RPGVXAcecn/rgss/sc_string.html
+++ b/RPGVXAcecn/rgss/sc_string.html
@@ -5,15 +5,15 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1>String &#23383;&#31526;&#20018;&#31867;</H1>
+<H1>String</H1>
 <P>&#23383;&#31526;&#20018;&#30340;&#31867;&#12290;&#21487;&#20197;&#22788;&#29702;&#20219;&#24847;&#38271;&#24230;&#30340;&#23383;&#33410;&#20018;&#12290;&#35814;&#32454;&#21442;&#30475; <A href="syntax03.html#L000254">Sprintf
 &#26684;&#24335;&#21270;&#23383;&#31526;&#20018;</A>&nbsp;&#12290;</P>
 <H2>&#36229;&#31867;</H2>
 <UL>
-  <LI><A href="sc_object.html">Object &#29289;&#20214;&#31867;</A> </LI></UL>
+  <LI><A href="sc_object.html">Object</A> </LI></UL>
 <H2>&#21253;&#21547;&#30340;&#27169;&#22359;</H2>
 <UL>
-  <LI><A href="sm_comparable.html">Comparable &#21487;&#27604;&#36739;&#27169;&#22359;</A> </LI></UL>
+  <LI><A href="sm_comparable.html">Comparable</A> </LI></UL>
 <H2>&#26041;&#27861;</H2>
 <DL>
   <DT><VAR>self</VAR> + <VAR>other</VAR>
@@ -88,13 +88,13 @@ p 'abbbcd'.gsub(/a(b+)/) { $1 }         # =&gt; "bbbcd"
   <DT><A name=L001393></A><VAR>include?(<VAR>substr</VAR>)</VAR>
   <DD>
   <P>&#33509;&#23383;&#31526;&#20018;&#25991;&#23383;&#21253;&#21547;&#23376;&#23383;&#31526;&#20018; <VAR>substr</VAR> &#21017;&#36820;&#22238; true&#12290;</P>
-  <P>&#33509; <VAR>substr</VAR> &#26159;&#20171;&#20110; 0&#65374;255 &#30340; <A href="sc_fixnum.html">Fixnum &#22266;&#23450;&#25972;&#25968;&#31867;</A>
+  <P>&#33509; <VAR>substr</VAR> &#26159;&#20171;&#20110; 0&#65374;255 &#30340; <A href="sc_fixnum.html">Fixnum</A>
   &#65292;&#21017;&#35270;&#20026;&#23383;&#31526;&#20195;&#30721;&#65292;&#33509;&#21253;&#21547;&#35813;&#23383;&#31526;&#21017;&#36820;&#22238; true&#12290;</P>
   <DT><A name=L001394></A><VAR>index(<VAR>pattern</VAR>[, <VAR>pos</VAR>])</VAR>
 
   <DD>
   <P>&#20174;&#24038;&#33267;&#21491;&#23547;&#25214;&#23376;&#23383;&#31526;&#20018;&#65292;&#36820;&#22238;&#25152;&#25214;&#21040;&#23383;&#31526;&#20018;&#30340;&#26368;&#24038;&#26041;&#20301;&#32622;&#12290;&#33509;&#25214;&#19981;&#21040;&#23383;&#31526;&#20018;&#65292;&#36820;&#22238; <VAR>nil</VAR> &#12290;</P>
-  <P><VAR>pattern</VAR> &#21442;&#25968;&#25351;&#23450;&#25152;&#23547;&#25214;&#30340;&#23376;&#23383;&#31526;&#20018;&#65292;&#20351;&#29992;&#25991;&#23383;&#23383;&#31526;&#20018;&#12289;0&#65374;255&#30340;&#25972;&#25968;&#12289;&#25110;&#27491;&#35268;&#34920;&#36798;&#24335;&#12290;</P>
+  <P><VAR>pattern</VAR> &#21442;&#25968;&#25351;&#23450;&#25152;&#23547;&#25214;&#30340;&#23376;&#23383;&#31526;&#20018;&#65292;&#20351;&#29992;&#25991;&#23383;&#23383;&#31526;&#20018;&#12289;0&#65374;255&#30340;&#25972;&#25968;&#12289;&#25110;&#27491;&#21017;&#34920;&#36798;&#24335;&#12290;</P>
   <P>&#33509;&#25351;&#23450;&#20102; <VAR>pos</VAR> &#65292;&#21017;&#20174;&#35813;&#20301;&#32622;&#24320;&#22987;&#23547;&#25214;&#65292;&#30465;&#30053;&#26102;&#40664;&#35748;&#20540;&#20026; 0&#12290;</P></DD>
   <DT>insert(<VAR>nth</VAR>, <VAR>other</VAR>)
   <DD>
@@ -144,7 +144,7 @@ p "abcde".scan(/./)
   <P>&#19982; <A href="#L001390">gsub</A>&nbsp;&#30456;&#21516;&#65292;&#20294;&#26159; sub &#21482;&#20250;&#21305;&#37197;&#19968;&#27425;&#12290; </P>
   <DT>to_f
   <DD>
-  <P>&#23558;&#23383;&#31526;&#20018;&#35270;&#20026; 10 &#36827;&#21046;&#30340;&#34920;&#36798;&#24335;&#24182;&#36716;&#25442;&#25104;&#28014;&#28857;&#25968;&#65288;<A href="sc_float.html">Float &#28014;&#28857;&#25968;&#31867;&#65289;</A>&#12290;</P>
+  <P>&#23558;&#23383;&#31526;&#20018;&#35270;&#20026; 10 &#36827;&#21046;&#30340;&#34920;&#36798;&#24335;&#24182;&#36716;&#25442;&#25104;&#28014;&#28857;&#25968;&#65288;<A href="sc_float.html">Float&#65289;</A>&#12290;</P>
   <DT>to_i([<VAR>base</VAR>])
   <DD>
   <P>&#23558;&#23383;&#31526;&#20018;&#35270;&#20026;&#25968;&#20540;&#34920;&#36798;&#24335;&#24182;&#36716;&#25442;&#25104;&#25972;&#25968;&#12290;</P>
