--- a/RPGVXAcecn/rgss/sc_symbol.html
+++ b/RPGVXAcecn/rgss/sc_symbol.html
@@ -5,11 +5,11 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1>Symbol &#31526;&#21495;&#31867;</H1>
+<H1>Symbol</H1>
 <P>&#34920;&#36798;&#31526;&#21495;&#30340;&#31867;&#12290;&#35814;&#32454;&#21442;&#30475; <A href="syntax03.html#L000282">Symbol &#31526;&#21495;&#34920;&#36798;&#24335;</A> &#12290;</P>
 <H2>&#36229;&#31867;</H2>
 <UL>
-  <LI><A href="sc_object.html">Object &#29289;&#20214;&#31867;</A> </LI></UL>
+  <LI><A href="sc_object.html">Object</A> </LI></UL>
 <H2>&#26041;&#27861;</H2>
 <DL>
   <DT><A name=L001480>id2name</A>
