--- a/RPGVXAcecn/rgss/sc_time.html
+++ b/RPGVXAcecn/rgss/sc_time.html
@@ -5,14 +5,14 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1>Time &#26102;&#38388;&#31867;</H1>
+<H1>Time</H1>
 <P>&#26102;&#38388;&#30340;&#31867;&#12290;</P>
 <H2>&#36229;&#31867;</H2>
 <UL>
-  <LI><A href="sc_object.html">Object &#29289;&#20214;&#31867;</A> </LI></UL>
+  <LI><A href="sc_object.html">Object</A> </LI></UL>
 <H2>&#21253;&#21547;&#30340;&#27169;&#22359;</H2>
 <UL>
-  <LI><A href="sm_comparable.html">Comparable &#21487;&#20030;&#20363;&#27169;&#22359;</A> </LI></UL>
+  <LI><A href="sm_comparable.html">Comparable</A> </LI></UL>
 <H2>&#31867;&#26041;&#27861;</H2>
 <DL>
   <DT>Time.now 
@@ -25,8 +25,7 @@ type=text/css href="../style.css">
   <P>&#36820;&#22238; <VAR>self</VAR> &#22312; <VAR>other</VAR> &#31186;&#21518;&#30340;&#26102;&#38388;&#12290;</P>
   <DT><VAR>self</VAR> - <VAR>other</VAR> 
   <DD>
-  <P>&#33509; <VAR>other</VAR> &#26159;&#26102;&#38388;&#23545;&#35937;&#65292;&#20197; <A href="sc_float.html">Float 
-  &#28014;&#28857;&#25968;&#31867;</A>&nbsp;&#36820;&#22238;&#20004;&#20010;&#26102;&#38388;&#30340;&#24046;&#12290;&#33509; <VAR>other</VAR> &#25968;&#20540;&#65292;&#21017;&#36820;&#22238; <SPAN 
+  <P>&#33509; <VAR>other</VAR> &#26159;&#26102;&#38388;&#23545;&#35937;&#65292;&#20197; <A href="sc_float.html">Float</A>&nbsp;&#36820;&#22238;&#20004;&#20010;&#26102;&#38388;&#30340;&#24046;&#12290;&#33509; <VAR>other</VAR> &#25968;&#20540;&#65292;&#21017;&#36820;&#22238; <SPAN 
   style="FONT-STYLE: italic">self</SPAN> &#22312; <SPAN 
   style="FONT-STYLE: italic">other</SPAN> &#31186;&#20043;&#21069;&#30340;&#26102;&#38388;&#12290;</P>
   <DT><VAR>self</VAR> &lt;=&gt; <VAR>other</VAR> 
