--- a/RPGVXAcecn/rgss/appendix02.html
+++ b/RPGVXAcecn/rgss/appendix02.html
@@ -5,7 +5,7 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>sprintf &#26684;&#24335;&#21270;&#23383;&#31526;&#20018;</FONT></H1>
+<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>sprintf &#26684;&#24335;</FONT></H1>
 <P><FONT face=&#24494;&#36719;&#38597;&#40657;>Ruby&#30340; sprintf &#26684;&#24335;&#22522;&#26412;&#19978;&#19982; C &#35821;&#35328;&#30456;&#21516;&#12290;&#24046;&#21035;&#26159;&#65306;&#19968;&#12289;&#27809;&#26377;&#38024;&#23545; C &#35821;&#35328;&#29305;&#26377;&#31867;&#22411; short &#25110; long 
 &#30340;&#20462;&#39280;&#31526;&#65292;&#20108;&#12289;&#22686;&#21152;&#20102;&#20108;&#36827;&#21046;&#21464;&#37327;&#25351;&#31034;&#23383;&#31526;(%b)&#65292;&#19977;&#12289;&#19981;&#23436;&#20840;&#25903;&#25345;&#25152;&#26377; sprintf &#30340;&#26041;&#35328;&#24335;&#35821;&#27861;&#12290;</FONT></P>
 <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#19979;&#38754;&#26159;&#23545;&#20110; Ruby &#30340; sprintf &#26684;&#24335;&#36827;&#34892;&#35814;&#32454;&#30340;&#35828;&#26126;&#12290;</FONT></P>
@@ -137,7 +137,7 @@ p sprintf("%.*s", 5, "foobar") # =&gt; "fooba"
   <DD>
   <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#33509;&#21442;&#25968;&#38750; </FONT><A 
   href="rgss/sc_string.html"><FONT 
-  face=&#24494;&#36719;&#38597;&#40657;>String &#23383;&#31526;&#20018;&#31867;</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;> &#23545;&#35937;&#65292;&#21017;&#20351;&#29992; to_s 
+  face=&#24494;&#36719;&#38597;&#40657;>String</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;> &#23545;&#35937;&#65292;&#21017;&#20351;&#29992; to_s 
   &#26041;&#27861;&#23558;&#21442;&#25968;&#23545;&#35937;&#36716;&#25104;&#23383;&#31526;&#20018;&#12290;</FONT></P>
   <DT><FONT face=&#24494;&#36719;&#38597;&#40657;>p </FONT>
   <DD>
