--- a/RPGVXAcecn/rgss/gc_rpg_animation_timing.html
+++ b/RPGVXAcecn/rgss/gc_rpg_animation_timing.html
@@ -9,7 +9,7 @@ type=text/css href="../style.css">
 <P>&#38899;&#25928;&#21644;&#38378;&#28865;&#25928;&#26524;&#26102;&#38388;&#30340;&#25968;&#25454;&#31867;&#12290;</P>
 <H2>&#36229;&#31867;</H2>
 <UL>
-  <LI><A href="sc_object.html">Object &#29289;&#20214;&#31867;</A> </LI></UL>
+  <LI><A href="sc_object.html">Object</A> </LI></UL>
 <H2>&#35843;&#29992;&#32773;</H2>
 <UL>
   <LI><A href="gc_rpg_animation.html">RPG::Animation</A> </LI></UL>
@@ -26,7 +26,7 @@ type=text/css href="../style.css">
   <P>&#38378;&#28865;&#33539;&#22260;&#65288;0&#65306;&#26080;&#12289; 1&#65306;&#38378;&#28865;&#30446;&#26631;&#12289;2&#65306;&#38378;&#28865;&#23631;&#24149;&#12289;3&#65306;&#38544;&#34255;&#30446;&#26631;&#65289;&#12290;</P>
   <DT>flash_color 
   <DD>
-  <P>&#38378;&#28865;&#39068;&#33394;&#65288;<A href="gc_color.html">Color &#33394;&#24425;&#31867;</A>&nbsp;&#65289;&#12290;</P>
+  <P>&#38378;&#28865;&#39068;&#33394;&#65288;<A href="gc_color.html">Color</A>&nbsp;&#65289;&#12290;</P>
   <DT>flash_duration 
   <DD>
   <P>&#38378;&#28865;&#25345;&#32493;&#26102;&#38388;&#12290;</P></DD></DL>
