--- a/RPGVXAcecn/rgss/gc_rpg_event_page.html
+++ b/RPGVXAcecn/rgss/gc_rpg_event_page.html
@@ -9,7 +9,7 @@ type=text/css href="../style.css">
 <P>&#22320;&#22270;&#20107;&#20214;&#22359;&#20107;&#20214;&#39029;&#36164;&#26009;&#12290;</P>
 <H2>&#36229;&#31867;</H2>
 <UL>
-  <LI><A href="sc_object.html">Object &#29289;&#20214;&#31867;</A> </LI></UL>
+  <LI><A href="sc_object.html">Object</A> </LI></UL>
 <H2>&#35843;&#29992;&#32773;</H2>
 <UL>
   <LI><A href="gc_rpg_event.html">RPG::Event</A> </LI></UL>
