--- a/RPGVXAcecn/rgss/gc_rpg_system_testbattler.html
+++ b/RPGVXAcecn/rgss/gc_rpg_system_testbattler.html
@@ -9,7 +9,7 @@ type=text/css href="../style.css">
 <P>&#25112;&#26007;&#27979;&#35797;&#30340;&#25112;&#26007;&#32773;&#25968;&#25454;&#31867;&#12290;</P>
 <H2>&#36229;&#31867;</H2>
 <UL>
-  <LI><A href="sc_object.html">Object &#29289;&#20214;&#31867;</A> </LI></UL>
+  <LI><A href="sc_object.html">Object</A> </LI></UL>
 <H2>&#35843;&#29992;&#32773;</H2>
 <UL>
   <LI><A href="gc_rpg_system.html">RPG::System</A> </LI></UL>
