--- a/RPGVXAcecn/rgss/s_classes.html
+++ b/RPGVXAcecn/rgss/s_classes.html
@@ -7,34 +7,34 @@ type=text/css href="../style.css">
 <BODY>
 <H1><FONT face=Verdana>&#20869;&#24314;&#31867;</FONT></H1>
 <UL>
-  <LI><A href="sc_object.html">Object &#29289;&#20214;&#31867;</A> 
+  <LI><A href="sc_object.html">Object</A> 
   <UL>
-    <LI><A href="sc_array.html">Array &#25968;&#32452;&#31867;</A> 
-    <LI><A href="sc_exception.html">Exception &#24322;&#24120;&#31867;</A> 
-    <LI><A href="sc_falseclass.html">FalseClass &#20266;&#31867;</A> 
-    <LI><A href="sc_fiber.html">Fiber &#36827;&#31243;&#31867;</A> 
-    <LI><A href="sc_hash.html">Hash &#21704;&#24076;&#34920;&#31867;</A> 
-    <LI><A href="sc_io.html">IO &#36755;&#20837;&#36755;&#20986;&#31867;</A> 
+    <LI><A href="sc_array.html">Array</A> 
+    <LI><A href="sc_exception.html">Exception</A> 
+    <LI><A href="sc_falseclass.html">FalseClass</A> 
+    <LI><A href="sc_fiber.html">Fiber</A> 
+    <LI><A href="sc_hash.html">Hash</A> 
+    <LI><A href="sc_io.html">IO</A> 
     <UL>
-      <LI><A href="sc_file.html">File &#25991;&#20214;&#31867;</A> </LI></UL>
-    <LI><A href="sc_matchdata.html">MatchData &#21305;&#37197;&#31867;</A> 
-    <LI><A href="sc_method.html">Method &#26041;&#27861;&#31867;</A> 
-    <LI><A href="sc_module.html">Module &#27169;&#22359;&#31867;</A> 
+      <LI><A href="sc_file.html">File</A> </LI></UL>
+    <LI><A href="sc_matchdata.html">MatchData</A> 
+    <LI><A href="sc_method.html">Method</A> 
+    <LI><A href="sc_module.html">Module</A> 
     <UL>
-      <LI><A href="sc_class.html">Class &#31867;&#31867;</A> </LI></UL>
-    <LI><A href="sc_nilclass.html">NilClass &#31354;&#31867;</A> 
-    <LI><A href="sc_numeric.html">Numeric &#25968;&#23383;&#31867;</A> 
+      <LI><A href="sc_class.html">Class</A> </LI></UL>
+    <LI><A href="sc_nilclass.html">NilClass</A> 
+    <LI><A href="sc_numeric.html">Numeric</A> 
     <UL>
-      <LI><A href="sc_integer.html">Integer &#25972;&#25968;&#31867;</A> 
+      <LI><A href="sc_integer.html">Integer</A> 
       <UL>
-        <LI><A href="sc_bignum.html">Bignum &#36229;&#38271;&#25972;&#25968;&#31867;</A> 
-        <LI><A href="sc_fixnum.html">Fixnum &#22266;&#23450;&#25972;&#25968;&#31867;</A> </LI></UL>
-      <LI><A href="sc_float.html">Float &#28014;&#28857;&#25968;&#31867;</A> </LI></UL>
-    <LI><A href="sc_proc.html">Proc &#36807;&#31243;&#31867;</A> 
-    <LI><A href="sc_range.html">Range &#33539;&#22260;&#31867;</A> 
-    <LI><A href="sc_regexp.html">Regexp &#27491;&#21017;&#34920;&#36798;&#24335;&#31867;</A> 
-    <LI><A href="sc_string.html">String &#23383;&#31526;&#20018;&#31867;</A> 
-    <LI><A href="sc_symbol.html">Symbol &#31526;&#21495;&#31867;</A> 
-    <LI><A href="sc_time.html">Time &#26102;&#38388;&#31867;</A> 
-    <LI><A href="sc_trueclass.html">TrueClass &#30495;&#31867;</A> </LI></UL></LI></UL>
+        <LI><A href="sc_bignum.html">Bignum</A> 
+        <LI><A href="sc_fixnum.html">Fixnum</A> </LI></UL>
+      <LI><A href="sc_float.html">Float</A> </LI></UL>
+    <LI><A href="sc_proc.html">Proc</A> 
+    <LI><A href="sc_range.html">Range</A> 
+    <LI><A href="sc_regexp.html">Regexp</A> 
+    <LI><A href="sc_string.html">String</A> 
+    <LI><A href="sc_symbol.html">Symbol</A> 
+    <LI><A href="sc_time.html">Time</A> 
+    <LI><A href="sc_trueclass.html">TrueClass</A> </LI></UL></LI></UL>
 <H6></H6></BODY></HTML>
