--- a/RPGVXAcecn/rgss/sc_array.html
+++ b/RPGVXAcecn/rgss/sc_array.html
@@ -5,18 +5,17 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>Array &#25968;&#32452;&#31867;</FONT></H1>
+<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>Array</FONT></H1>
 <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#25968;&#32452;&#31867;&#12290;&#25968;&#32452;&#30340;&#20803;&#32032;&#21487;&#20197;&#26159;&#20219;&#20309; Ruby &#23545;&#35937;&#12290;&#35814;&#32454;&#35831;&#21442;&#38405; </FONT><A
 href="syntax03.html#L000279"><FONT face=&#24494;&#36719;&#38597;&#40657;>Array &#34920;&#36798;&#24335;</FONT></A><FONT
 face=&#24494;&#36719;&#38597;&#40657;>&nbsp;&#12290;</FONT></P>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#36229;&#31867;</FONT></H2>
 <UL>
-  <LI><A href="sc_object.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Object &#29289;&#20214;&#31867;</FONT></A><FONT
+  <LI><A href="sc_object.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Object</FONT></A><FONT
   face=&#24494;&#36719;&#38597;&#40657;> </FONT></LI></UL>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#21253;&#21547;&#30340;&#27169;&#22359;</FONT></H2>
 <UL>
-  <LI><A href="sm_enumerable.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Enumerable
-  &#21487;&#20030;&#20363;&#27169;&#22359;</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;> </FONT></LI></UL>
+  <LI><A href="sm_enumerable.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Enumerable</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;> </FONT></LI></UL>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#31867;&#26041;&#27861;</FONT></H2>
 <DL>
   <DT><FONT face=&#24494;&#36719;&#38597;&#40657;>Array[item,...] </FONT>
@@ -87,7 +86,7 @@ p ary                        # =&gt; [0, "inserted", "a", 99, "c", 3]</FONT></PR
   style="FONT-STYLE: italic">other</SPAN> &#30340;&#20869;&#23481;&#36830;&#32467;&#36215;&#26469;&#24182;&#36820;&#22238;&#19968;&#20010;&#26032;&#30340;&#25968;&#32452;&#12290;&#33509; <VAR>other</VAR>
   &#19981;&#26159;&#25968;&#32452;&#65292;&#21017;&#20351;&#29992; other.to_ary &#30340;&#36820;&#22238;&#20540;&#12290;&#33509;&#36820;&#22238;&#20540;&#19981;&#26159;&#25968;&#32452;&#65292;&#25243;&#20986; </FONT><A
   href="s_exceptions.html#TypeError"><FONT
-  face=&#24494;&#36719;&#38597;&#40657;>TypeError&#65288;&#24322;&#24120;&#65306;&#31867;&#22411;&#38169;&#35823;&#65289;</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;> &#12290;</FONT></P><PRE><FONT face=&#24494;&#36719;&#38597;&#40657;>a = [1, 2]
+  face=&#24494;&#36719;&#38597;&#40657;>TypeError&#22411;&#38169;&#35823;&#65289;</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;> &#12290;</FONT></P><PRE><FONT face=&#24494;&#36719;&#38597;&#40657;>a = [1, 2]
 b = [8, 9]
 p a + b     # =&gt; [1, 2, 8, 9]
 p a         # =&gt; [1, 2]        (&#19981;&#21464;)
