--- a/RPGVXAcecn/rgss/sc_class.html
+++ b/RPGVXAcecn/rgss/sc_class.html
@@ -5,7 +5,7 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>Class &#31867;&#31867;</FONT></H1>
+<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>Class</FONT></H1>
 <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#31867;&#30340;&#31867;&#12290;&#26356;&#20934;&#30830;&#30340;&#35828;&#65292;&#27599;&#20010;&#31867;&#37117;&#26377;&#19968;&#20010;&#26080;&#21517;&#30340;&#12300;&#20803;&#31867;&#12301;&#65292;&#32780;&#27492;&#31867;&#23601;&#26159;&#37027;&#20123;&#20803;&#31867;&#30340;&#31867;&#12290;&#36825;&#31181;&#20851;&#31995;&#26377;&#28857;&#22797;&#26434;&#65292;&#20294;&#26159;&#23545;&#20110;&#20351;&#29992; Ruby 
 &#24182;&#38750;&#29305;&#21035;&#38656;&#35201;&#20102;&#35299;&#36825;&#31181;&#20851;&#31995;&#12290; </FONT></P>
 <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#19982;&#27169;&#22359;&#30456;&#27604;&#65292;&#31867;&#65306;</FONT></P>
@@ -14,10 +14,10 @@ type=text/css href="../style.css">
   <LI><FONT face=&#24494;&#36719;&#38597;&#40657;>&#26080;&#27861;&#20351;&#29992;&nbsp;</FONT><A href="sc_module.html#L001119"><FONT 
   face=&#24494;&#36719;&#38597;&#40657;>include</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;>&nbsp;&#36827;&#34892;&#28151;&#21512; </FONT></LI></UL>
 <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#38500;&#27492;&#20043;&#22806;&#65292;&#20960;&#20046;&#25152;&#26377;&#30340;&#21151;&#33021;&#37117;&#26159;&#32487;&#25215;&#33258; </FONT><A href="sc_module.html"><FONT 
-face=&#24494;&#36719;&#38597;&#40657;>Module &#27169;&#22359;&#31867;</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;>&#12290;</FONT></P>
+face=&#24494;&#36719;&#38597;&#40657;>Module</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;>&#12290;</FONT></P>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#36229;&#31867;</FONT></H2>
 <UL>
-  <LI><A href="sc_module.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Module &#27169;&#22359;&#31867;</FONT></A><FONT 
+  <LI><A href="sc_module.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Module</FONT></A><FONT 
   face=&#24494;&#36719;&#38597;&#40657;> </FONT></LI></UL>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#26041;&#27861;</FONT></H2>
 <DL>
