--- a/RPGVXAcecn/rgss/sc_falseclass.html
+++ b/RPGVXAcecn/rgss/sc_falseclass.html
@@ -5,12 +5,12 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>FalseClass &#20266;&#31867;</FONT></H1>
+<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>FalseClass</FONT></H1>
 <P><FONT face=&#24494;&#36719;&#38597;&#40657;>false &#20540;&#30340;&#31867;&#12290;false &#26159;&#26412;&#31867;&#21807;&#19968;&#30340;&#23454;&#20363;&#12290;false &#21644; nil 
 &#19968;&#26679;&#65292;&#26159;&#29992;&#26469;&#34920;&#26126;&#22330;&#21512;&#20026;&#12300;&#20266;&#12301;&#30340;&#23545;&#35937;&#65292;&#20854;&#20313;&#25152;&#26377;&#30340;&#23545;&#35937;&#37117;&#34920;&#31034;&#12300;&#30495;&#12301;&#12290;</FONT></P>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#36229;&#31867;</FONT></H2>
 <UL>
-  <LI><A href="sc_object.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Object &#29289;&#20214;&#31867;</FONT></A><FONT 
+  <LI><A href="sc_object.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Object</FONT></A><FONT 
   face=&#24494;&#36719;&#38597;&#40657;> </FONT></LI></UL>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#26041;&#27861;</FONT></H2>
 <DL>
