--- a/RPGVXAcecn/rgss/sc_hash.html
+++ b/RPGVXAcecn/rgss/sc_hash.html
@@ -5,17 +5,16 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>Hash &#21704;&#24076;&#34920;&#31867;</FONT></H1>
+<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>Hash</FONT></H1>
 <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#21704;&#24076;&#34920;&#30340;&#31867;&#65292;&#35814;&#24773;&#35831;&#21442;&#30475; </FONT><A href="syntax03.html#L000280"><FONT 
 face=&#24494;&#36719;&#38597;&#40657;>&#21704;&#24076;&#34920;&#34920;&#36798;&#24335;</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;>&nbsp;&#12290;</FONT></P>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#36229;&#31867;</FONT></H2>
 <UL>
-  <LI><A href="sc_object.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Object &#29289;&#20214;&#31867;</FONT></A><FONT 
+  <LI><A href="sc_object.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Object</FONT></A><FONT 
   face=&#24494;&#36719;&#38597;&#40657;> </FONT></LI></UL>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#21253;&#21547;&#27169;&#22359;</FONT></H2>
 <UL>
-  <LI><A href="sm_enumerable.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Enumerable 
-  &#21487;&#20030;&#20363;&#27169;&#22359;</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;> </FONT></LI></UL>
+  <LI><A href="sm_enumerable.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Enumerable</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;> </FONT></LI></UL>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#26041;&#27861;</FONT></H2>
 <DL>
   <DT><FONT face=&#24494;&#36719;&#38597;&#40657;>self[key] </FONT>
