--- a/RPGVXAcecn/rgss/sc_io.html
+++ b/RPGVXAcecn/rgss/sc_io.html
@@ -5,16 +5,15 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>IO &#36755;&#20837;&#36755;&#20986;&#31867;</FONT></H1>
+<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>IO</FONT></H1>
 <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#25552;&#20379;&#22522;&#26412;&#36755;&#20837;/&#36755;&#20986;&#21151;&#33021;&#30340; IO &#31867;&#12290;</FONT></P>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#36229;&#31867;</FONT></H2>
 <UL>
-  <LI><A href="sc_object.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Object &#29289;&#20214;&#31867;</FONT></A><FONT 
+  <LI><A href="sc_object.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Object</FONT></A><FONT 
   face=&#24494;&#36719;&#38597;&#40657;> </FONT></LI></UL>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#21253;&#21547;&#27169;&#22359;</FONT></H2>
 <UL>
-  <LI><A href="sm_enumerable.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Enumerable 
-  &#21487;&#20030;&#20363;&#27169;&#22359;</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;> </FONT></LI></UL>
+  <LI><A href="sm_enumerable.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Enumerable</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;> </FONT></LI></UL>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#26041;&#27861;</FONT></H2>
 <DL>
   <DT><FONT face=&#24494;&#36719;&#38597;&#40657;>binmode </FONT>
