--- a/RPGVXAcecn/rgss/sc_numeric.html
+++ b/RPGVXAcecn/rgss/sc_numeric.html
@@ -5,18 +5,17 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>Numeric &#25968;&#23383;&#31867;</FONT></H1>
+<H1><FONT face=&#24494;&#36719;&#38597;&#40657;>Numeric</FONT></H1>
 <P><FONT face=&#24494;&#36719;&#38597;&#40657;>Numeric &#26159;&#25968;&#23383;&#30340;&#25277;&#35937;&#31867;&#12290;&#22312; Ruby &#20013;&#65292;&#26159;&#21487;&#20197;&#22312;&#19981;&#21516;&#31867;&#22411;&#30340;&#25968;&#23383;&#20043;&#38388;&#36827;&#34892;&#36816;&#31639;&#12290;</FONT></P>
 <P><FONT face=&#24494;&#36719;&#38597;&#40657;>&#36816;&#31639;&#21644;&#27604;&#36739;&#30340;&#26041;&#27861;&#65288;+&#12289;-&#12289;*&#12289;/&#12289;&lt;=&gt;&#65289;&#31561;&#26159;&#22312;&#23376;&#31867;&#20013;&#23450;&#20041;&#30340;&#12290;&#20026;&#20102;&#25552;&#39640;&#25928;&#29575;&#65292;&#19982; Numeric 
 &#30456;&#21516;&#30340;&#26041;&#27861;&#20063;&#21487;&#22312;&#23376;&#31867;&#20013;&#37325;&#26032;&#23450;&#20041;&#12290;</FONT></P>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#36229;&#31867;</FONT></H2>
 <UL>
-  <LI><A href="sc_object.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Object &#29289;&#20214;&#31867;</FONT></A><FONT 
+  <LI><A href="sc_object.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Object</FONT></A><FONT 
   face=&#24494;&#36719;&#38597;&#40657;> </FONT></LI></UL>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#21253;&#21547;&#30340;&#27169;&#22359;</FONT></H2>
 <UL>
-  <LI><A href="sm_comparable.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Comparable 
-  &#21487;&#27604;&#36739;&#27169;&#22359;</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;> </FONT></LI></UL>
+  <LI><A href="sm_comparable.html"><FONT face=&#24494;&#36719;&#38597;&#40657;>Comparable</FONT></A><FONT face=&#24494;&#36719;&#38597;&#40657;> </FONT></LI></UL>
 <H2><FONT face=&#24494;&#36719;&#38597;&#40657;>&#26041;&#27861;</FONT></H2>
 <DL>
   <DT><FONT face=&#24494;&#36719;&#38597;&#40657;>+ <VAR>self</VAR> </FONT>
