--- a/RPGVXAcecn/rgss/sc_range.html
+++ b/RPGVXAcecn/rgss/sc_range.html
@@ -5,14 +5,14 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1>Range &#33539;&#22260;&#31867;</H1>
+<H1>Range</H1>
 <P>&#33539;&#22260;&#23545;&#35937;&#30340;&#31867;&#12290;&#35814;&#32454;&#21442;&#30475; <A href="syntax03.html#L000281">&#33539;&#22260;&#34920;&#36798;&#24335;</A>&nbsp;&#12290;</P>
 <H2>&#36229;&#31867;</H2>
 <UL>
-  <LI><A href="sc_object.html">Object &#29289;&#20214;&#31867;</A> </LI></UL>
+  <LI><A href="sc_object.html">Object</A> </LI></UL>
 <H2>&#21253;&#21547;&#30340;&#27169;&#22359;</H2>
 <UL>
-  <LI><A href="sm_enumerable.html">Enumerable &#21487;&#20030;&#20363;&#27169;&#22359;</A> </LI></UL>
+  <LI><A href="sm_enumerable.html">Enumerable</A> </LI></UL>
 <H2>&#31867;&#26041;&#27861;</H2>
 <DL>
   <DT>Range.new(<VAR>first</VAR>, <VAR>last</VAR>[, <VAR>exclude_end</VAR>]) 
