--- a/RPGVXAcecn/rgss/sc_trueclass.html
+++ b/RPGVXAcecn/rgss/sc_trueclass.html
@@ -5,11 +5,11 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1>TrueClass &#30495;&#31867;</H1>
+<H1>TrueClass</H1>
 <P>true &#20540;&#30340;&#31867;&#12290;true &#26159;&#26412;&#31867;&#21807;&#19968;&#30340;&#23454;&#20363;&#12290;true &#26159;&#29992;&#26469;&#34920;&#26126;&#22330;&#21512;&#20026;&#12300;&#30495;&#12301;&#30340;&#29289;&#20214;&#12290;</P>
 <H2>&#36229;&#31867;</H2>
 <UL>
-  <LI><A href="sc_object.html">Object &#29289;&#20214;&#31867;</A> </LI></UL>
+  <LI><A href="sc_object.html">Object</A> </LI></UL>
 <H2>&#26041;&#27861;</H2>
 <DL>
   <DT><VAR>self</VAR> &amp; <VAR>other</VAR> 
