--- a/RPGVXAcecn/rgss/sm_filetest.html
+++ b/RPGVXAcecn/rgss/sm_filetest.html
@@ -5,7 +5,7 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 8.00.7601.17785"></HEAD>
 <BODY>
-<H1>FileTest &#25991;&#20214;&#27979;&#35797;&#27169;&#22359;</H1>
+<H1>FileTest</H1>
 <P>&#21253;&#21547;&#25991;&#20214;&#27979;&#35797;&#20989;&#25968;&#30340;&#27169;&#22359;&#12290;</P>
 <H2>&#27169;&#22359;&#20989;&#25968;</H2>
 <DL>
