--- a/RPGVXAcecn/rgss/sm_math.html
+++ b/RPGVXAcecn/rgss/sm_math.html
@@ -5,7 +5,7 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1>Math &#25968;&#23398;&#27169;&#22359;</H1>
+<H1>Math</H1>
 <P>&#25903;&#25345;&#28014;&#28857;&#23567;&#25968;&#35745;&#31639;&#30340;&#27169;&#22359;&#12290;</P>
 <H2>&#27169;&#22359;&#26041;&#27861;</H2>
 <DL>
